Save/Update files [ci skip]

--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -612,11 +612,11 @@
  MERCHANT_ARRIVED_TITLE:0 "商人の到着"
  MERCHANT_ARRIVED_SETUP:0 "交易ノードに商人が到着したとき"
  MERCHANT_ARRIVED_HEADER:0 "宰相からの報告"
- MERCHANT_ARRIVED_1:0 "商人が到着しました"
- MERCHANT_ARRIVED_2:0 "商人である"
- MERCHANT_ARRIVED_3:0 "$COUNTRY$からの$NAME$が"
- MERCHANT_ARRIVED_4:0 "以下に到着しました。"
- MERCHANT_ARRIVED_5:0 "$LOCATION$"
+ MERCHANT_ARRIVED_1:0 "商人の到着"
+ MERCHANT_ARRIVED_2:0 "$COUNTRY$出身の$NAME$"
+ MERCHANT_ARRIVED_3:0 "という商人が"
+ MERCHANT_ARRIVED_4:0 "$LOCATION$"
+ MERCHANT_ARRIVED_5:0 "に到着しました。"
  MERCHANT_ARRIVED_LOG:0 "$COUNTRY$の商人$NAME$、$LOCATION$に到着"
  MERCHANT_ARRIVED_BTN1:0 "OK"
  MERCHANT_ARRIVED_BTN2:0 "OK"
@@ -624,12 +624,12 @@
  MERCHANT_CANCEL_TITLE:0 "商人の中断"
  MERCHANT_CANCEL_SETUP:0 "商人が帰還したとき"
  MERCHANT_CANCEL_HEADER:0 "宰相からの報告"
- MERCHANT_CANCEL_1:0 "商人が戻りました。"
- MERCHANT_CANCEL_2:0 "商人である"
- MERCHANT_CANCEL_3:0 "$COUNTRY$からの$NAME$が"
- MERCHANT_CANCEL_4:0 "以下から帰還しました。"
+ MERCHANT_CANCEL_1:0 "商人の帰還"
+ MERCHANT_CANCEL_2:0 "$COUNTRY$出身の$NAME$"
+ MERCHANT_CANCEL_3:0 "という商人が"
+ MERCHANT_CANCEL_4:0 "$LOCATION$"
  MERCHANT_CANCEL_5:0 "$LOCATION$"
- MERCHANT_CANCEL_6:0 "$NAME$は$COUNTRY$に仕えています。"
+ MERCHANT_CANCEL_6:0 "から帰還しました。"
  MERCHANT_CANCEL_LOG:0 "$NAME$、$PROVINCE$を去る"
  MERCHANT_CANCEL_BTN1:0 "OK"
  MERCHANT_CANCEL_BTN2:0 "OK"
@@ -695,7 +695,7 @@
  FREEIDEA_SETUP:0 "我が国がアイデアグループのアイデアを解禁したとき"
  FREEIDEA_HEADER:0 "$MESSENGER$"
  FREEIDEA_1:0 "$TYPE$の発展！"
- FREEIDEA_2:0 "$TITLE$、我々の$TYPE$は発展し、以下へのアクセスが許可されました。"
+ FREEIDEA_2:0 "$TITLE$、我らが$TYPE$は進展し、以下へのアクセスが許可されました。"
  FREEIDEA_3:0 "$LEVEL$"
  FREEIDEA_4:0 "$DESC$"
  FREEIDEA_5:0 "ボーナス効果："
@@ -708,7 +708,7 @@
  IDEA_SETUP:0 "我が国がアイデアを解禁したとき"
  IDEA_HEADER:0 "$MESSENGER$"
  IDEA_1:0 "$TYPE$の発展！"
- IDEA_2:1 "我々は$TYPE$のアイデアを獲得しました"
+ IDEA_2:1 "我々は以下の$TYPE$を解禁しました"
  IDEA_3:0 "$NAME$"
  IDEA_4:0 "$DESC$"
  IDEA_5:0 "ボーナス効果："
@@ -818,9 +818,9 @@
  SUPPORTHEIR_HEADER:0 ""
  SUPPORTHEIR_1:0 "$ACTOR$からの使者"
  SUPPORTHEIR_2:0 "$MONARCHTITLE$、$WHO$の外交官は現在、"
- SUPPORTHEIR_3:0 "彼らの王朝の後継者が"
- SUPPORTHEIR_4:0 "以下の王位を受け継ぐために支援しています。"
- SUPPORTHEIR_5:0 "$RECIPIENT$"
+ SUPPORTHEIR_3:0 "$RECIPIENT$"
+ SUPPORTHEIR_4:0 "王位に彼らの王朝の後継者を就かせようと"
+ SUPPORTHEIR_5:0 "支援しています。"
  SUPPORTHEIR_LOG:0 "$WHO$、$RECIPIENT$へ外交官を派遣し、自らの王朝出身の後継者を支援へ"
  SUPPORTHEIR_BTN1:0 "OK"
  SUPPORTHEIR_BTN2:0 "OK"
@@ -830,9 +830,9 @@
  STOPSUPPORTHEIR_HEADER:0 ""
  STOPSUPPORTHEIR_1:0 "$ACTOR$からの使者"
  STOPSUPPORTHEIR_2:0 "$MONARCHTITLE$、$WHO$の外交官は"
- STOPSUPPORTHEIR_3:0 "彼らが選んだ後継者が"
- STOPSUPPORTHEIR_4:0 "以下の王位を受継ぐための支援を停止しました。"
- STOPSUPPORTHEIR_5:0 "$RECIPIENT$"
+ STOPSUPPORTHEIR_3:0 "$RECIPIENT$"
+ STOPSUPPORTHEIR_4:0 "王位に彼らが選んだ後継者を就かせる"
+ STOPSUPPORTHEIR_5:0 "支援を停止しました。"
  STOPSUPPORTHEIR_LOG:0 "$WHO$、$RECIPIENT$で自らの王朝出身の後継者を支援していた外交官を召還"
  STOPSUPPORTHEIR_BTN1:0 "OK"
  STOPSUPPORTHEIR_BTN2:0 "OK"
@@ -842,9 +842,9 @@
  IMPROVERELATIONS_HEADER:0 ""
  IMPROVERELATIONS_1:0 "$ACTOR$からの使者"
  IMPROVERELATIONS_2:0 "$MONARCHTITLE$、$WHO$の外交官が"
- IMPROVERELATIONS_3:0 "関係改善を始めました。"
- IMPROVERELATIONS_4:0 "以下の者と"
- IMPROVERELATIONS_5:0 "$RECIPIENT$"
+ IMPROVERELATIONS_3:0 "$RECIPIENT$"
+ IMPROVERELATIONS_4:0 "との関係改善を始めた"
+ IMPROVERELATIONS_5:0 "との報せが参りました。"
  IMPROVERELATIONS_6:0 "これらの勤勉な外交官は確実に結果を出すでしょう！"
  IMPROVERELATIONS_LOG:0 "$WHO$、$RECIPIENT$に外交官を派遣し、関係改善へ"
  IMPROVERELATIONS_BTN1:0 "OK"
@@ -855,10 +855,10 @@
  STOPIMPROVERELATIONS_HEADER:0 "$MESSENGER$"
  STOPIMPROVERELATIONS_1:0 "$ACTOR$"
  STOPIMPROVERELATIONS_2:0 "$MONARCHTITLE$、$WHO$の外交官が"
- STOPIMPROVERELATIONS_3:0 "関係改善の試みを停止しました。"
- STOPIMPROVERELATIONS_4:0 "以下の者と"
- STOPIMPROVERELATIONS_5:0 "$RECIPIENT$"
- STOPIMPROVERELATIONS_6:0 "彼らの仕事の効果は、しばらくの間残っています。"
+ STOPIMPROVERELATIONS_3:0 "$RECIPIENT$"
+ STOPIMPROVERELATIONS_4:0 "との関係改善の試みを止めた"
+ STOPIMPROVERELATIONS_5:0 "との報せが参りました。"
+ STOPIMPROVERELATIONS_6:0 "彼らの仕事の効果は、しばらくの間残ることでしょう。"
  STOPIMPROVERELATIONS_LOG:0 "$WHO$、$RECIPIENT$との関係を改善していた外交官を召還"
  STOPIMPROVERELATIONS_BTN1:0 "OK"
  STOPIMPROVERELATIONS_BTN2:0 "OK"
@@ -868,8 +868,8 @@
  STOPIMPROVERELATIONSMAXOPINIONUS_HEADER:0 ""
  STOPIMPROVERELATIONSMAXOPINIONUS_1:0 "$RECIPIENT$からの使者"
  STOPIMPROVERELATIONSMAXOPINIONUS_2:0 "$MONARCHTITLE$、我々の外交官は"
- STOPIMPROVERELATIONSMAXOPINIONUS_3:0 "以下の者との関係改善を中断しました。"
- STOPIMPROVERELATIONSMAXOPINIONUS_4:0 "$RECIPIENT$"
+ STOPIMPROVERELATIONSMAXOPINIONUS_3:0 "$RECIPIENT$との"
+ STOPIMPROVERELATIONSMAXOPINIONUS_4:0 "関係改善の試みを止めました。"
  STOPIMPROVERELATIONSMAXOPINIONUS_5:0 "関係値が最大の$MAX_OPINION|Y$に達したためです。"
  STOPIMPROVERELATIONSMAXOPINIONUS_6:0 "外交官は呼び戻されるまで$RECIPIENT$に滞在し、関係を維持します。"
  STOPIMPROVERELATIONSMAXOPINIONUS_LOG:0 "$WHO$の外交官、関係値が最大に達したため、$RECIPIENT$との関係改善を停止"
@@ -880,11 +880,11 @@
  STOPIMPROVERELATIONSMAXOPINION_SETUP:0 "関係値が最大に達したため、ある国が他国との関係改善を止めたとき"
  STOPIMPROVERELATIONSMAXOPINION_HEADER:0 ""
  STOPIMPROVERELATIONSMAXOPINION_1:0 "$WHO$からの使者"
- STOPIMPROVERELATIONSMAXOPINION_2:0 "$MONARCHTITLE$、$WHO$の外交官が行っていた"
- STOPIMPROVERELATIONSMAXOPINION_3:0 "以下の者との関係の改善を中断しました。"
- STOPIMPROVERELATIONSMAXOPINION_4:0 "$RECIPIENT$"
+ STOPIMPROVERELATIONSMAXOPINION_2:0 "$MONARCHTITLE$、$WHO$の外交官が"
+ STOPIMPROVERELATIONSMAXOPINION_3:0 "$RECIPIENT$との"
+ STOPIMPROVERELATIONSMAXOPINION_4:0 "関係改善の試みを止めたとの報せが参りました。"
  STOPIMPROVERELATIONSMAXOPINION_5:0 "関係値が最大の$MAX_OPINION|Y$に達したためです。"
- STOPIMPROVERELATIONSMAXOPINION_6:0 "彼らの仕事の効果は、しばらくの間残っています。"
+ STOPIMPROVERELATIONSMAXOPINION_6:0 "彼らの仕事の効果は、しばらくの間残ることでしょう。"
  STOPIMPROVERELATIONSMAXOPINION_LOG:0 "$WHO$の外交官、関係値が最大に達したため、$RECIPIENT$との関係改善を停止"
  STOPIMPROVERELATIONSMAXOPINION_BTN1:0 "OK"
  STOPIMPROVERELATIONSMAXOPINION_BTN2:0 "OK"
@@ -1686,7 +1686,7 @@
  NEWMONOTHER_3:0 "$FULLMONARCHNAME$が"
  NEWMONOTHER_4:0 "$COUNTRY$で$RISE$。"
  NEWMONOTHER_5:0 "統治：$ADM$ 外交：$DIP$ 軍事：$MIL$"
- NEWMONOTHER_6:0 "\n彼らの新しい支配者は$PERSONALITY$と言われています。"
+ NEWMONOTHER_6:0 "\n彼らの新しい支配者は$PERSONALITY$だろうと言われています。"
  NEWMONOTHER_LOG:0 "$TITLE$$FULLMONARCHNAME$が$COUNTRY$で$RISE$"
  NEWMONOTHER_BTN1:0 "OK"
  NEWMONOTHER_BTN2:0 "OK"
@@ -1696,8 +1696,8 @@
  ADVISOR_DEATH_OTHER_SETUP:0 "他国の顧問が死去したとき"
  ADVISOR_DEATH_OTHER_HEADER:0 "顧問が死去しました！"
  ADVISOR_DEATH_OTHER_1:0 "$ADVISORNAME$"
- ADVISOR_DEATH_OTHER_2:0 "偉大な顧問は"
- ADVISOR_DEATH_OTHER_3:0 "$COUNTRY$"
+ ADVISOR_DEATH_OTHER_2:0 "$COUNTRY$"
+ ADVISOR_DEATH_OTHER_3:0 "に従事していた偉大な顧問が"
  ADVISOR_DEATH_OTHER_4:0 "死去しました。"
  ADVISOR_DEATH_OTHER_5:0 "$COUNTRY$の全国民が$ADVISORNAME$の逝去を嘆いています。"
  ADVISOR_DEATH_OTHER_LOG:0 "$COUNTRY$に仕えていた$ADVISORNAME$、死す"
@@ -1708,8 +1708,8 @@
  ADVISOR_DEATH_SETUP:0 "我々の顧問が死去したとき"
  ADVISOR_DEATH_HEADER:0 "$ADVISORNAME$が死去しました！"
  ADVISOR_DEATH_1:0 "$ADVISORNAME$"
- ADVISOR_DEATH_2:0 "我が国の偉大な顧問"
- ADVISOR_DEATH_3:0 "は死去しました。"
+ ADVISOR_DEATH_2:0 "我が国の偉大な顧問が"
+ ADVISOR_DEATH_3:0 "死去しました。"
  ADVISOR_DEATH_4:0 "彼のような者には二度と出会えないだろうことから、$ADVISORNAME$の逝去を悼みます。"
  ADVISOR_DEATH_LOG:0 "$ADVISORNAME$、死す"
  ADVISOR_DEATH_BTN1:0 "OK"
@@ -1786,11 +1786,11 @@
  BANKRUPT_BTN1:0 "OK"
  BANKRUPT_BTN2:0 "OK"
  BANKRUPT_BTN3:0 "移動"
- DEBASE_CURRENCY_TITLE:0 "通貨価値の低下"
+ DEBASE_CURRENCY_TITLE:0 "通貨価値の切り下げ"
  DEBASE_CURRENCY_SETUP:0 "我が国が通貨価値の切り下げをしたとき"
- DEBASE_CURRENCY_HEADER:0 "通貨価値の低下"
+ DEBASE_CURRENCY_HEADER:0 "通貨価値の切り下げ"
  DEBASE_CURRENCY_1:0 "我々は通貨価値を"
- DEBASE_CURRENCY_2:0 "§Y$VALUE$§!¤低下させました。"
+ DEBASE_CURRENCY_2:0 "§Y$VALUE$§!¤切り下げました"
  DEBASE_CURRENCY_3:0 "一方で§R$CORRUPTION$%§!の汚職が与えられます。"
  DEBASE_CURRENCY_LOG:0 "通貨価値切り下げへ"
  DEBASE_CURRENCY_BTN1:0 "OK"
@@ -2117,9 +2117,9 @@
  EVENTHAPPENOTHER_SETUP:0 "他国で単一選択イベントが発生したとき"
  EVENTHAPPENOTHER_HEADER:0 ""
  EVENTHAPPENOTHER_1:0 "$COUNTRY$からの使者"
- EVENTHAPPENOTHER_2:0 "彼らは我々に"
+ EVENTHAPPENOTHER_2:0 "彼らは我々に彼らの国で起こった"
  EVENTHAPPENOTHER_3:0 "$EVENT$"
- EVENTHAPPENOTHER_4:0 "それは最近、彼らの国で起こりました。"
+ EVENTHAPPENOTHER_4:0 "について語っています。"
  EVENTHAPPENOTHER_LOG:0 "イベント：$COUNTRY$「$EVENT$」"
  EVENTHAPPENOTHER_BTN1:0 "OK"
  EVENTHAPPENOTHER_BTN2:0 "OK"
@@ -2747,10 +2747,10 @@
  GUARATOUS_SETUP:0 "他国が我々の独立を保障したとき"
  GUARATOUS_HEADER:0 ""
  GUARATOUS_1:0 "$ACTOR$からの使者"
- GUARATOUS_2:0 "$MONARCHTITLE$、我々は"
- GUARATOUS_3:0 "愉快なことに"
- GUARATOUS_4:0 "独立保障を"
- GUARATOUS_5:0 "$ACTOR$から受けました。"
+ GUARATOUS_2:0 "$MONARCHTITLE$、我々は愉快なことに"
+ GUARATOUS_3:0 "独立保障を"
+ GUARATOUS_4:0 "$ACTOR$"
+ GUARATOUS_5:0 "から受けました。"
  GUARATOUS_6:0 "まあ我々のような強国との関係を、彼らは重視しているのでしょう。"
  GUARATOUS_LOG:0 "$ACTOR$、我が国の独立を保障へ"
  GUARATOUS_BTN1:0 "OK"
@@ -2761,9 +2761,9 @@
  GUARATOOTHER_HEADER:0 ""
  GUARATOOTHER_1:0 "$ACTOR$からの使者"
  GUARATOOTHER_2:0 "$MONARCHTITLE$、"
- GUARATOOTHER_3:0 "$RECIPIENT$"
- GUARATOOTHER_4:0 "は、以下の国に独立保障されました。"
- GUARATOOTHER_5:0 "$ACTOR$"
+ GUARATOOTHER_3:0 "$RECIPIENT$は今や"
+ GUARATOOTHER_4:0 "$ACTOR$に"
+ GUARATOOTHER_5:0 "独立を保障されています。"
  GUARATOOTHER_LOG:0 "$ACTOR$、$RECIPIENT$の独立を保障へ"
  GUARATOOTHER_BTN1:0 "OK"
  GUARATOOTHER_BTN2:0 "OK"
@@ -2773,8 +2773,8 @@
  WEGUARAT_HEADER:0 "$MESSENGER$"
  WEGUARAT_1:0 "保障"
  WEGUARAT_2:0 "$MONARCHTITLE$、"
- WEGUARAT_3:0 "$RECIPIENT$"
- WEGUARAT_4:0 "は、我々が独立保障するのに十分な価値があると感じていることを"
+ WEGUARAT_3:0 "$RECIPIENT$は"
+ WEGUARAT_4:0 "我々が独立を保障するのに十分な価値があると感じていることを"
  WEGUARAT_5:0 "幸運に感じるはずです。"
  WEGUARAT_LOG:0 "$RECIPIENT$の独立を保障へ"
  WEGUARAT_BTN1:0 "OK"
@@ -3713,8 +3713,8 @@
  SIEGEOVER_2:0 "$MONARCHTITLE$、我々は$RESULT$しました。"
  SIEGEOVER_3:0 "$NAME$でです！"
  SIEGEOVER_4:0 "包囲は$TIME$日間続けられ、守備隊は最終的に$REASON$で壊滅しました。"
- SIEGEOVER_5:0 "$WINNER$が"
- SIEGEOVER_6:0 "これからこの州を支配します。守備隊は$RESDESC$"
+ SIEGEOVER_5:0 "$WINNER$がこれからこの州を支配します。"
+ SIEGEOVER_6:0 "守備隊は$RESDESC$"
  SIEGEOVER_LOG:0 "$NAME$に$RESULT$"
  SIEGEOVER_BTN1:0 "OK"
  SIEGEOVER_BTN2:0 "OK"
@@ -4300,8 +4300,8 @@
  NEWMON_TITLE:0 "新君主"
  NEWMON_SETUP:0 "我が国が新しい君主を得たとき"
  NEWMON_HEADER:0 "新しい$TITLE$！"
- NEWMON_1:0 "$FULLMONARCHNAME$が"
- NEWMON_2:0 "今、我らが栄光ある国家を統治なさいます！"
+ NEWMON_1:0 "$FULLMONARCHNAME$"
+ NEWMON_2:0 "が今、我らが栄光ある国家を統治なさいます！"
  NEWMON_3:0 "（ $ADM$ £adm£ / $DIP$ £dip£ / $MIL$ £mil£ ）"
  NEWMON_4:0 " $STAT$"
  NEWMON_6:0 "$MOURN$"
@@ -4476,8 +4476,8 @@
  CAPITALMOVEDOTHER_TITLE:0 "遷都"
  CAPITALMOVEDOTHER_SETUP:0 "ある国が遷都したとき"
  CAPITALMOVEDOTHER_HEADER:0 "遷都"
- CAPITALMOVEDOTHER_1:0 "$THEM$が"
- CAPITALMOVEDOTHER_2:0 "$PROVINCE$に"
+ CAPITALMOVEDOTHER_1:0 "$THEM$"
+ CAPITALMOVEDOTHER_2:0 "が$PROVINCE$に"
  CAPITALMOVEDOTHER_3:0 "遷都しました。"
  CAPITALMOVEDOTHER_LOG:0 "$THEM$、$PROVINCE$遷都"
  CAPITALMOVEDOTHER_BTN1:0 "素晴らしい！"
@@ -4715,10 +4715,10 @@
  BREAKCOUNTRYOTHER_SETUP:0 "他国が反乱軍により破壊されたとき"
  BREAKCOUNTRYOTHER_HEADER:0 ""
  BREAKCOUNTRYOTHER_1:0 "$OTHER$からの使者"
- BREAKCOUNTRYOTHER_2:0 "$MONARCHTITLE$、何と愚かなことに！"
- BREAKCOUNTRYOTHER_3:0 "$OTHER$は崩壊しました。"
- BREAKCOUNTRYOTHER_4:0 "彼らは反抗的な暴徒を打ち負かすことができませんでした。"
- BREAKCOUNTRYOTHER_5:0 "彼らは反乱軍の要求を受け入れるほかありません。"
+ BREAKCOUNTRYOTHER_2:0 "$MONARCHTITLE$、何と愚かな奴らでしょう！"
+ BREAKCOUNTRYOTHER_3:0 "$OTHER$が崩壊したのです。"
+ BREAKCOUNTRYOTHER_4:0 "奴らは反抗的な暴徒を打ち負かすことができませんでした。"
+ BREAKCOUNTRYOTHER_5:0 "反乱軍の要求を受け入れるほかないでしょう。"
  BREAKCOUNTRYOTHER_LOG:0 "$OTHER$、崩壊！"
  BREAKCOUNTRYOTHER_BTN1:0 "OK"
  BREAKCOUNTRYOTHER_BTN2:0 "OK"
@@ -4797,7 +4797,7 @@
  REVOLTSIEGE_BTN1:0 "OK"
  REVOLTSIEGE_BTN2:0 "OK"
  REVOLTSIEGE_BTN3:0 "移動"
- REVOLTSIEGE_MAP:0 "$REBELS$成功しました。"
+ REVOLTSIEGE_MAP:0 "$REBELS$の成功"
  REBELENTERED_TITLE:0 "反乱軍が州に侵攻"
  REBELENTERED_SETUP:0 "反乱軍が他国から我が国の州に侵入したとき"
  REBELENTERED_HEADER:0 "$MESSENGER$"
@@ -5389,8 +5389,8 @@
  PROVMODEXP_TITLE:0 "州補正の失効"
  PROVMODEXP_SETUP:0 "一時的な州補正が失効したとき"
  PROVMODEXP_HEADER:0 "州補正の失効"
- PROVMODEXP_1:0 "$MOD$が"
- PROVMODEXP_2:0 "$PROV$にて"
+ PROVMODEXP_1:0 "$MOD$"
+ PROVMODEXP_2:0 "が$PROV$にて"
  PROVMODEXP_3:0 "失効しました。"
  PROVMODEXP_4:0 "$DESC$"
  PROVMODEXP_LOG:0 "$PROV$の$MOD$、失効"
@@ -5400,8 +5400,8 @@
  COUNTRYMODEXP_TITLE:0 "国家補正の失効"
  COUNTRYMODEXP_SETUP:0 "我々の一時的な国家補正が失効したとき"
  COUNTRYMODEXP_HEADER:0 "国家補正の失効"
- COUNTRYMODEXP_1:0 "$MOD$が"
- COUNTRYMODEXP_2:0 "$COUNTRY$にて"
+ COUNTRYMODEXP_1:0 "$MOD$"
+ COUNTRYMODEXP_2:0 "が$COUNTRY$にて"
  COUNTRYMODEXP_3:0 "失効しました。"
  COUNTRYMODEXP_4:0 "$DESC$"
  COUNTRYMODEXP_LOG:0 "$COUNTRY$の$MOD$、失効"
@@ -6181,8 +6181,8 @@
  ASK_FOR_MARCH_DENIED_2:0 "我々が辺境伯になるという要求を"
  ASK_FOR_MARCH_DENIED_3:0 "拒否しました。"
  ASK_FOR_MARCH_DENIED_LOG:0 "$OVERLORD$、我々の辺境伯要求を拒否"
- ASK_FOR_MARCH_DENIED_BTN1:0 "最悪だ"
- ASK_FOR_MARCH_DENIED_BTN2:0 "最悪だ"
+ ASK_FOR_MARCH_DENIED_BTN1:0 "クソったれ"
+ ASK_FOR_MARCH_DENIED_BTN2:0 "クソったれ"
  ASK_FOR_MARCH_DENIED_BTN3:0 "移動"
  CENTEROFREFORMCONVERT_TITLE:0 "州が改宗された"
  CENTEROFREFORMCONVERT_SETUP:1 "改革の中心地あるいは宗教の中心地が信仰を広めたとき"
@@ -6350,8 +6350,8 @@
  CONDOTTIERI_DECLINED_2:0 "$ARMYDESC$を"
  CONDOTTIERI_DECLINED_3:0 "雇用する我々の提案を断りました"
  CONDOTTIERI_DECLINED_LOG:0 "$RECIPIENT$、我々のコンドッティエーリ提案を拒否"
- CONDOTTIERI_DECLINED_BTN1:0 "最悪だ"
- CONDOTTIERI_DECLINED_BTN2:0 "最悪だ"
+ CONDOTTIERI_DECLINED_BTN1:0 "クソったれ"
+ CONDOTTIERI_DECLINED_BTN2:0 "クソったれ"
  CONDOTTIERI_DECLINED_BTN3:0 "移動"
  CANCELCONDOTTIERI_TITLE:0 "コンドッティエーリ協定の解消"
  CANCELCONDOTTIERI_SETUP:0 "ある国がコンドッティエーリ協定を解消したとき"
@@ -6460,8 +6460,8 @@
  BREAKALLIANCE_DECLINED_5:1 "我が国は$PRESTIGE$の威信を失い、"
  BREAKALLIANCE_DECLINED_6:1 "この不名誉は決して忘れないだろう。"
  BREAKALLIANCE_DECLINED_LOG:0 "$RECIPIENT$、我が国の要求を拒否"
- BREAKALLIANCE_DECLINED_BTN1:0 "最悪だ"
- BREAKALLIANCE_DECLINED_BTN2:0 "最悪だ"
+ BREAKALLIANCE_DECLINED_BTN1:0 "クソったれ"
+ BREAKALLIANCE_DECLINED_BTN2:0 "クソったれ"
  BREAKALLIANCE_DECLINED_BTN3:0 "移動"
  OVERLORD_DEVELOPED_SUBJECT_PROVINCE_TITLE:0 "我々の宗主国は我々の州を開発しました。"
  OVERLORD_DEVELOPED_SUBJECT_PROVINCE_SETUP:0 "ある国が従属国の州を開発したとき"
@@ -6689,8 +6689,8 @@
  ASK_FOR_TRIBUTARY_DENIED_2:0 "彼らの朝貢国になる我々の要求を"
  ASK_FOR_TRIBUTARY_DENIED_3:0 "拒否しました。"
  ASK_FOR_TRIBUTARY_DENIED_LOG:0 "$RECIPIENT$、我が国の朝貢国化要求を拒否"
- ASK_FOR_TRIBUTARY_DENIED_BTN1:0 "最悪だ"
- ASK_FOR_TRIBUTARY_DENIED_BTN2:0 "最悪だ"
+ ASK_FOR_TRIBUTARY_DENIED_BTN1:0 "クソったれ"
+ ASK_FOR_TRIBUTARY_DENIED_BTN2:0 "クソったれ"
  ASK_FOR_TRIBUTARY_DENIED_BTN3:0 "移動"
  TRIBUTE_REFUSED_TITLE:0 "貢物を送ることを拒否した"
  TRIBUTE_REFUSED_SETUP:0 "我々の朝貢国が朝貢を拒否したとき"
@@ -6701,8 +6701,8 @@
  TRIBUTE_REFUSED_4:0 "送ることを拒否しました。"
  TRIBUTE_REFUSED_5:0 "彼らが信頼できないことは明らかです。"
  TRIBUTE_REFUSED_LOG:0 "$ACTOR$、貢物送付を拒否"
- TRIBUTE_REFUSED_BTN1:0 "最悪だ"
- TRIBUTE_REFUSED_BTN2:0 "最悪だ"
+ TRIBUTE_REFUSED_BTN1:0 "クソったれ"
+ TRIBUTE_REFUSED_BTN2:0 "クソったれ"
  TRIBUTE_REFUSED_BTN3:0 "移動"
  TRIBUTE_TEMP_CHANGED_TITLE:0 "今年の貢物の変更"
  TRIBUTE_TEMP_CHANGED_SETUP:0 "我々の朝貢国が必要な貢物を支払うことができなかったとき"
@@ -6713,8 +6713,8 @@
  TRIBUTE_TEMP_CHANGED_4:0 "我々に送ることができません。"
  TRIBUTE_TEMP_CHANGED_5:0 "代わりに彼らは$SECONDAMOUNT|Y$の$SECONDTYPE$を我々に送りました。"
  TRIBUTE_TEMP_CHANGED_LOG:0 "$ACTOR$、$FIRSTTYPE$の代わりに$SECONDTYPE$を支払った"
- TRIBUTE_TEMP_CHANGED_BTN1:0 "最悪だ"
- TRIBUTE_TEMP_CHANGED_BTN2:0 "最悪だ"
+ TRIBUTE_TEMP_CHANGED_BTN1:0 "クソったれ"
+ TRIBUTE_TEMP_CHANGED_BTN2:0 "クソったれ"
  TRIBUTE_TEMP_CHANGED_BTN3:0 "移動"
  TRIBUTE_CHANGED_TITLE:0 "貢物の変更"
  TRIBUTE_CHANGED_SETUP:0 "我々の朝貢国が選択された種類の貢物を送ることができなかったとき"
@@ -6725,8 +6725,8 @@
  TRIBUTE_CHANGED_4:0 "我々に送るための手段を持っていません。"
  TRIBUTE_CHANGED_5:0 "彼らは代わりに毎年$SECONDAMOUNT|Y$の$SECONDTYPE$を我々に送るでしょう。"
  TRIBUTE_CHANGED_LOG:0 "$ACTOR$、$FIRSTTYPE$の代わりに$SECONDTYPE$を送ることに"
- TRIBUTE_CHANGED_BTN1:0 "最悪だ"
- TRIBUTE_CHANGED_BTN2:0 "最悪だ"
+ TRIBUTE_CHANGED_BTN1:0 "クソったれ"
+ TRIBUTE_CHANGED_BTN2:0 "クソったれ"
  TRIBUTE_CHANGED_BTN3:0 "移動"
  OVERLORD_CHANGED_TRIBUTE_TITLE:0 "貢物の変更"
  OVERLORD_CHANGED_TRIBUTE_SETUP:0 "我々の宗主国が要求する貢物を変更したとき"
@@ -7066,8 +7066,8 @@
  STOPCURRYFAVORS_HEADER:0 ""
  STOPCURRYFAVORS_1:0 "$ACTOR$からの使者"
  STOPCURRYFAVORS_2:0 "$MONARCHTITLE$よ、$WHO$の外交官は"
- STOPCURRYFAVORS_3:0 "以下の国家におべっかを行うことを取りやめました"
- STOPCURRYFAVORS_4:0 "$RECIPIENT$"
+ STOPCURRYFAVORS_3:0 "$RECIPIENT$"
+ STOPCURRYFAVORS_4:0 "におべっかを使うことを止めました。"
  STOPCURRYFAVORS_LOG:0 "$WHO$、$RECIPIENT$へのおべっかを使っていた外交官を召還"
  STOPCURRYFAVORS_BTN1:0 "OK"
  STOPCURRYFAVORS_BTN2:0 "OK"
