--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -714,7 +714,7 @@
  ming_crisis.9.A:0 "戦争に便乗しよう！"
  ming_crisis.9.B:0 "まだ介入を行う時機ではない。"
  empire_of_china_nomadic_border_events.3.t:0 "[From.GetUsableNameCap]の遊牧民の恐怖"
- empire_of_china_nomadic_border_events.3.d:0 "[From.GetAdjective][From.Monarch.GetTitle]の臣民の間では、我々が代表となっている脅威に宗主が手も足も出ていないという不満の声が上がっています。我々の力が成長し続けるにつれて、このような不満の声は大きくなることが期待できます。"
+ empire_of_china_nomadic_border_events.3.d:0 "[From.GetAdjective][From.Monarch.GetTitle]の臣民の間では、主に我々のような脅威に宗主が手も足も出ていないという不満の声が上がっています。我々の力が成長し続けるにつれて、このような不満の声も大きくなることでしょう。"
  empire_of_china_nomadic_border_events.3.opt:0 "奴らの崩壊を待つだけでいいのだ"
  empire_of_china_nomadic_border_events.3.tooltip:0 "§Y[From.GetName]§!：\n国難§Y国境の遊牧民への無防備§!の侵攻度が§R10%§!以上である。"
  empire_of_china_nomadic_border_events.4.t:0 "[From.GetUsableName]での恐慌"
@@ -767,16 +767,16 @@
  ming_crisis.4.c:0 "[CDL.GetName] must be very nice around that time..."
  ming_crisis.5.c:0 "[YUE.GetName] is a great realm to be in..."
  ming_crisis.5.e:0 "I think I start a new life in [WUU.GetName]..."
- flavor_kor.13.t:0 "[Root.GetName]と満州の台頭"
- flavor_kor.13.d:1 "We and the Jurchen have a history of warfare in the past, and only thanks to our natural borders, the Jangbaek Mountains, was it possible to keep Korea safe from the raids of the horde. With the unification of the Jurchen the question of our safety has risen up yet again though. While we were able to hold off the raids on our borders, it is much more unlikely that we can protect ourselves from the force of an united Manchuria. It might be worth considering to pledge our allegiance to [MCH.GetName], and pay tribute to them in return for peace and prosperity in [Root.GetName]."
- flavor_kor.13.a:0 "Why should we? The Celestial Emperor will protect us."
- flavor_kor.13.b:0 "We shall pay our tribute to the Manchu."
- flavor_kor.13.c:0 "I have enough of these games. We are nobody's tributary from this day forward!"
- flavor_kor.14.t:0 "[From.GetName] requests to become our Tributary"
- flavor_kor.14.d:0 "The [From.Monarch.GetTitle] of [From.GetName] has finally recognized our superior military power and requests to become the tributary of our great [Root.GovernmentName]. Of course there are good reasons to accept [From.Monarch.GetHerHis] request, but we will be forced to give up our plans to expand into the Korean peninsula."
- flavor_kor.14.a:0 "Accept the request"
+ flavor_kor.13.t:0 "[Root.GetName]と台頭する満州"
+ flavor_kor.13.d:1 "我々と女真族は過去に戦いの歴史があり、長白山脈という自然の境界線があったからこそ、大軍の襲撃から朝鮮を守ることができたのです。しかし、女真族が統一され、再び安全が問われるようになりました。国境を侵されることはあっても、満州の連合軍から身を守れるとは到底思えません。いっそのこと[MCH.GetName]に忠誠を誓い、[Root.GetName]の平和と繁栄と引き換えに彼らに貢物をすることも一考の価値があるかもしれません。"
+ flavor_kor.13.a:0 "なぜ、我々が？中華帝国が守ってくれる。"
+ flavor_kor.13.b:0 "満州に貢ぎ物をしよう。"
+ flavor_kor.13.c:0 "この手の遊びはもうたくさんだ。今日から我々は誰の朝貢国でもないのだ！"
+ flavor_kor.14.t:0 "[From.GetName]が朝貢国化を懇願"
+ flavor_kor.14.d:0 "[From.GetName]の[From.Monarch.GetTitle]がついに我々の優れた軍事力を認め、我らが偉大なる[Root.GovernmentName]の朝貢国になることを要請してきたのです。もちろん、この要求を受け入れる正当な理由があるものの、我々は朝鮮半島への進出計画をあきらめざるを得なくなるでしょう。"
+ flavor_kor.14.a:0 "要請を受け入れる"
  flavor_kor.14.a.tt:0 "§Y朝鮮§!地方の全ての領有州が§Y[KOR.GetName]§!に返還される。"
- flavor_kor.14.b:0 "Refuse the request"
+ flavor_kor.14.b:0 "要請を断る"
  flavor_mch.EVTNAME8:0 "満州の勃興"
  flavor_mch.EVTDESC8:0 "満州地域の女真族は、いつも[Root.GetName]に忠実な朝貢国であった。身の程を弁え、我々に仕えていたのだ。\nしかし、最近ではその態度が大きく変わりつつある。我々が年貢を貰って満足している間に、征服欲溢れる女真族は他部族を征服し、地域と部族を一つにまとめ上げたのだ。"
  flavor_mch.EVTOPTA8:0 "天の慈悲があらんことを。"
