--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -1832,9 +1832,9 @@
  SERVER_LOST:0 "サーバーが見つかりません…"
  HOST_BUTTON:0 "ホスト"
  JOIN_BUTTON:0 "参加"
- LOG_SETTING_LOG:0 "ログに表示します。"
- LOG_SETTING_POPUP:0 "ポップアップウィンドウを開く"
- LOG_SETTING_MAP:0 "地図に表示。"
+ LOG_SETTING_LOG:0 "ログに表示する。"
+ LOG_SETTING_POPUP:0 "ポップアップウィンドウを開く。"
+ LOG_SETTING_MAP:0 "地図に表示する。"
  LOG_SETTING_IDLE:0 "待機状態です。"
  COMBAT_TRIUMPH:0 "勝利した"
  COMBAT_FLEE:0 "逃走した"
@@ -1848,7 +1848,7 @@
  LEAGUE_OF_CAMBRAI_NAME:0 "カンブレー同盟戦争"
  LEAGUE_OF_CAMBRAI_DESC:0 "神聖同盟戦争（またはカンブレー同盟戦争）は1508年から1516年の間戦われた。教皇ユリウス2世は、イタリアの教皇領の地位を強化しようとしていたため、北のヴェネツィアの立場を抑制したいと考えていた。これを実行するために、教皇は、フランスのルイ12世、ハプスブルク帝国のマクシミリアン1世、スペインのフェルディナンド1世、そして自分自身で構成されるカンブレー同盟を創設した。"
  EIGHTY_YEARS_WAR_NAME:0 "八十年戦争"
- EIGHTY_YEARS_WAR_DESC:0 "八十年戦争（1568～1648年）は、スペイン王に対するオランダの反乱であった。スペインは当初、反乱を抑止するのに成功した。しかし1572年、反乱軍はブリーレを征服し、反乱が復活した。その後、北部の州は事実上、正式には1648年に、ネーデルラント連邦州として独立した。"
+ EIGHTY_YEARS_WAR_DESC:0 "八十年戦争（1568～1648年）は、スペイン王に対するオランダの反乱であった。スペインは当初、反乱を抑止するのに成功した。しかし1572年、反乱軍がデン・ブリエルを征服しことで反乱は再起した。その後、北部の州はネーデルラント連邦州として（事実上、正式には1648年に）独立した。"
  THIRTY_YEARS_WAR_NAME:0 "三十年戦争"
  THIRTY_YEARS_WAR_DESC:0 "三十年戦争の一連の紛争は、主に今日のドイツの州で、1618年から1648年までの間行われた。戦争は神聖ローマ帝国内のカトリックとプロテスタントの国家間の宗教摩擦から生じたが、最終的にはヨーロッパの主要国のほとんどを巻き込んだ戦争となった。"
  SPANISH_SUCCESSION_NAME:0 "スペイン継承戦争"
@@ -2177,7 +2177,7 @@
  western_longbowDESCR:0 "長弓は、14世紀から16世紀までイングランドからウェールズまでの歩兵が主に使用していた飛び道具であった。武器は非常に正確で射程が長く、鎖かたびらの装甲を貫くのに十分強力であった。イングランドは、フランスとの百年戦争でこの武器を利用して、クレシーとアジャンクールの戦いで大きな成功を収めた。火薬の開発により、長弓は時代遅れとなった。これは初期のマスケット銃よりも力がなかったためではなく、優れた長弓兵になるには何年も練習しなければならなかったためであり、一方で火器の使用を人々に訓練することはより容易であった。"
  western_medieval_infantryDESCR:0 "西ヨーロッパ軍の基本的な兵士である。彼らはほとんど、あるいは全く訓練されず、非常に貧弱な設備で、農民から徴兵される傾向があった。しかし、大量に展開されると彼らは壊滅的なものとなる可能性を秘めている"
  western_medieval_knightsDESCR:0 "中世の騎士はフランク王国を起源とし、そこでは戦士が軍役と引き換えに報酬として土地を与えられた。強力な戦士エリートというこの概念は、西ヨーロッパを通じて広がり、騎士が少数の貴族の中で地位を獲得した封建制度の不可欠な部分となった。馬を操る鞍とあぶみの開発により、騎士はより重く装甲化され、敵の歩兵に対して致命的な力で突撃することができた。彼らはまた、状況がそれを指示したとき、重い近接武器を使用し、馬から下りて戦うことでも知られていた。"
- western_men_at_armsDESCR:0 "武装兵は中世後期の西ヨーロッパ軍の職業軍人であった。騎士や高貴な一族は、数人の武装兵を雇って彼らの従者とした。彼らは通常の封建的な徒卒よりも優れた武装と装甲を持つ傾向があった。百年戦争の間、メンアットアームズは馬に乗り、重い武器で戦った兵士だったが、社会的地位は高くなかったため、騎士と呼ばれることはなかった。より装備が良く、より訓練された者は武装護衛官として知られていた。"
+ western_men_at_armsDESCR:0 "武装兵（Man at Arms）は中世後期の西ヨーロッパ軍の職業軍人であった。騎士や高貴な一族は、数人の武装兵を雇って彼らの従者とした。彼らは通常の封建的な徒卒よりも優れた武装と装甲を持つ傾向があった。百年戦争の間、武装兵は馬に乗り、重い武器で戦った兵士だったが、社会的地位は高くなかったため、騎士と呼ばれることはなかった。より装備が良く、より訓練された者は武装護衛官（Sergeants at Arms）として知られていた。"
  zapotec_gunpowder_warfareDESCR:0 "攻撃の勇気に重点を置いた平原戦士でさえ、ヨーロッパからもたらされたマスケットの利点を無視することはできなかった。新たな攻撃的なマスケット兵は依然として攻撃に重点を置くものであったが、火薬兵器は彼らにさらなる火力を与えた。"
  zapotec_plains_warfareDESCR:0 "平原戦士はアメリカにおける究極の攻撃ユニットであったが、彼らでさえ進歩の影響を受けなかったわけではなかった。新たな武器や戦術はユニットに攻撃能力を向上させ、新しい訓練方法は戦闘中の士気を維持するのに役立った。"
  zapotec_tribal_warfareDESCR:0 "サポテカ帝国の地域は、攻撃戦に非常に適した条件を作り出した。ここでは、攻撃に特化した軍事ユニットが開発され、相手の士気を損なうように設計された戦術が採用されている。"
