--- a/source/localisation/ledger_l_english.yml
+++ b/source/localisation/ledger_l_english.yml
@@ -87,12 +87,12 @@
  LEDGER_TECH_GROUP:0 "技術グループ"
  LEDGER_SKILL:0 "スキル"
  LEDGER_TYPE:0 "タイプ"
- LEDGER_NATION_ARMIES:0 "陸軍"
+ LEDGER_NATION_ARMIES:0 "自国の陸軍"
  LEDGER_REGION_CONTINENT:0 "地域/大陸"
  LEDGER_INF:0 "歩兵"
  LEDGER_ART:0 "砲兵"
  LEDGER_CAV:0 "騎兵"
- LEDGER_NATION_NAVIES:0 "海軍"
+ LEDGER_NATION_NAVIES:0 "自国の海軍"
  LEDGER_BIG:0 "大型船"
  LEDGER_LIGHT:0 "小型船"
  LEDGER_CAL:0 "ガレー船"
