Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -1452,7 +1452,7 @@
  CONVHEIR_ALREADY:0 "あなたの後継者はすでに将軍です。"
  CONVHEIR_IRO:2 "§Y後継者に軍指揮権を付与§!\n"
  CONVERT_HEIR_DRO:1 "自国の後継者を将軍にします。そうすることで、彼/彼女は軍を指揮できるようになります。後継者が軍を率いることは有益かもしれませんが、将軍は戦死する危険性があるため、大きなリスクもあります。"
- OWN_COUNTRY_CORE:0 "中核化できるのは、あなたが所有している州だけです。"
+ OWN_COUNTRY_CORE:0 "中核化できるのは、あなたが領有している州だけです。"
  NOT_SEIZE_IN_COMBAT:0 "戦闘中に州を奪うことはできません。"
  NOT_CITIES_TO_BE_SEIZED_2:0 "植民地のみ奪うことができます。"
  CAN_NOT_SEIZXE_CAPITAL:0 "首都を奪うことはできません。"
@@ -1479,7 +1479,7 @@
  SCORCH_EARTH_TITLE:0 "§Y焦土化§!"
  NO_SCORCH_COLONY:0 "植民地は焦土化するのに十分なほど建設されていません。"
  NO_SCORCH_ALREADY:0 "この場所はすでに荒廃しており、これ以上焦土化するのは不可能です。"
- NO_SCORCH_OTHER:1 "あなたが支配しているか、または敵が所有している州のみ焦土化することができます。"
+ NO_SCORCH_OTHER:1 "あなたが支配しているか、または敵が領有している州のみ焦土化することができます。"
  NO_SCORCH_AT_WAR:0 "戦争中のみ、焦土化を行うことができます。"
  NO_SCORCH_RETREATING:0 "退却しながら焦土化を行うことはできません。"
  NOSE_NO_POINTS:0 "この州を焦土化するには§Y$COST$§W£mil£が必要ですが、§Y$VAL$§Wしか持っていません。"
