--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -327,7 +327,7 @@
  MAPMODE_COALITION_DESC:1 "選択国の侵略的拡大に対する統治者の評価に基づいて州を色づけします。選択国の侵略的拡大に対する統治者の評価が-50以下、一般評価が0以下の場合、包囲網に参加可能な国の色はアンバー～赤に。選択国の侵略的拡大に対する統治者の評価が-50以下、一般評価が0以上の場合、緑～橙に。それ以外の場合、灰～緑になります。その国が赤色であれば、あなたに対して包囲網を組んでいます。"
  MAPMODE_UNREST_DESC:0 "不穏度に応じて州を色分けします。赤は不穏度が高い州を示し、黄色は中程度の不穏度を、緑色は不穏度が低いまたはゼロであることを示しています。縞模様は、反乱軍によって支配されている州を示しています。"
  MAPMODE_COLONIAL_DESC:0 "植民範囲と植民可能性に応じて州を色分けします。緑は植民地化されておらず植民地化できる可能性のある州を示します。赤は植民地化するには遠すぎる州を示します。青色は植民地化された州を示し、青色が濃いほど進行が進んでいることを示します。グレーは既に植民地化された州または都市を示します。"
- MAPMODE_RIVALS_DESC:0 "あなたがライバルに指定した国、またはあなたをライバルに指定した国が所有している州を色付けしています。"
+ MAPMODE_RIVALS_DESC:0 "あなたがライバルに指定した国、またはあなたをライバルに指定した国が領有している州を色付けしています。"
  MAPMODE_REBELTYPES_DESC:0 "あなたの国にどんなタイプの反乱勢力の党派があるかに応じて、州に色付けされています。"
  MAPMODE_GOVERNMENT_DESC:0 "州の色は、政府のタイプの違いによって異なる色に着色されています。"
  MAPMODE_OVERSEAS_DESC:0 "州の色は、海外は赤、地続きの州は緑に色付けされています。"
