--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -355,7 +355,7 @@
  emp_hab_ostend_company_trigger_tooltip:0 "§Y1§!社以上の交易会社を持っている。"
  emp_hab_indian_trading_title:0 "インドの領土"
  emp_hab_indian_trading_desc:0 "インドと東インド諸島に多くの領土を所有することによって、我々の植民地帝国は完成するだろう。"
- emp_hab_indian_trading_effect_tooltip:0 "§Y[Root.GetName]§!が領有する州に隣接している§Yインド§!及び§Yインドネシア§!の全ての州に対する恒久的な請求権を獲得します。"
+ emp_hab_indian_trading_effect_tooltip:0 "§Y[Root.GetName]§!の領有州に隣接している§Yインド§!及び§Yインドネシア§!の全州に対する恒久的な請求権を獲得します。"
  emp_hab_foothold_in_china_title:0 "中国の富"
  emp_hab_foothold_in_china_desc:0 "商人は、極東に途方もない富を持つ国があると語っている。この富が間違いなく我が懐に流れ込むよう、自国の軍艦と交渉者を送り込まねばならない。"
  emp_hab_austrialasia_title:0 "オーストララシアへの入植"
@@ -2185,7 +2185,7 @@
  han_anglo_german_unity:0 "アングロ-ゲルマンの統合"
  desc_han_anglo_german_unity:0 "数世紀前、アングル人とザクセン人がブリテンに定住し、イングランド人の始祖となった。以来、自国語は多様化したが、ある意味においては、我が民族は未だ兄弟である。我々は民族統一を回復した。"
  same_government_as_root:0 "政府が§Y[Root.GovernmentName]§!である"
- emp_bur_league_of_public_weal_effect_tooltip2:0 "以下の効果は、フランスが領有する州にのみ適用されます："
+ emp_bur_league_of_public_weal_effect_tooltip2:0 "以下の効果は、フランスの領有州にのみ適用されます："
  rivalled_or_rival_of:0 "ライバルであるか、§Y[Root.GetName]§!にライバル指定されている"
  cb_crusade_pheasants:0 "聖戦"
  cb_crusade_pheasants_desc:0 "奴らは呪われた異教徒だ！"
