--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -748,7 +748,7 @@
  KNOWLEDGE_SHARING_4:0 "知識共有の提案について"
  KNOWLEDGE_SHARING_5:0 "$RESULT$ことを決断しました。"
  KNOWLEDGE_SHARING_6:0 "$EFFECT$"
- KNOWLEDGE_SHARING_LOG:2 "$RECIPIENT$ decided to $RESULT$ the offer of Knowledge Sharing from $ACTOR$."
+ KNOWLEDGE_SHARING_LOG:2 "$RECIPIENT$、$ACTOR$からの知識共有提案を$RESULT$"
  KNOWLEDGE_SHARING_BTN1:1 "OK"
  KNOWLEDGE_SHARING_BTN2:1 "OK"
  KNOWLEDGE_SHARING_BTN3:0 "移動"
@@ -1074,8 +1074,8 @@
  OTHERJOINSOTHERFEDERATION_HEADER:0 ""
  OTHERJOINSOTHERFEDERATION_1:0 "$ACTOR$からの使者"
  OTHERJOINSOTHERFEDERATION_2:0 "$MONARCHTITLE$、$ACTOR$は"
- OTHERJOINSOTHERFEDERATION_3:0 "連邦に加入しました。"
- OTHERJOINSOTHERFEDERATION_4:0 "$LEADER$"
+ OTHERJOINSOTHERFEDERATION_3:0 "$LEADER$"
+ OTHERJOINSOTHERFEDERATION_4:0 "の連邦に加入しました。"
  OTHERJOINSOTHERFEDERATION_LOG:0 "$ACTOR$、連邦加盟"
  OTHERJOINSOTHERFEDERATION_BTN1:0 "憂慮する！"
  OTHERJOINSOTHERFEDERATION_BTN2:0 "憂慮する！"
@@ -1085,8 +1085,8 @@
  OTHERLEAVSOURFEDERATION_HEADER:0 ""
  OTHERLEAVSOURFEDERATION_1:0 "$ACTOR$からの使者"
  OTHERLEAVSOURFEDERATION_2:0 "$MONARCHTITLE$、$ACTOR$は"
- OTHERLEAVSOURFEDERATION_3:0 "は我々の連邦から離脱しました。"
- OTHERLEAVSOURFEDERATION_4:0 "$LEADER$"
+ OTHERLEAVSOURFEDERATION_3:0 "$LEADER$"
+ OTHERLEAVSOURFEDERATION_4:0 "の連邦から離脱しました。"
  OTHERLEAVSOURFEDERATION_LOG:0 "$ACTOR$、我が連邦から離脱"
  OTHERLEAVSOURFEDERATION_BTN1:0 "気掛かりだ"
  OTHERLEAVSOURFEDERATION_BTN2:0 "気掛かりだ"
@@ -1887,8 +1887,8 @@
  DISCOVERY_SPREAD_TITLE:0 "発見の伝播"
  DISCOVERY_SPREAD_SETUP:0 "発見が我が国に伝播したとき"
  DISCOVERY_SPREAD_HEADER:0 "遠い海岸の知らせです。"
- DISCOVERY_SPREAD_1:0 "発見が伝播しました。"
- DISCOVERY_SPREAD_2:0 "我々は以下について知りました"
+ DISCOVERY_SPREAD_1:0 "発見の伝播"
+ DISCOVERY_SPREAD_2:0 "我々は以下の州について知りました"
  DISCOVERY_SPREAD_3:0 "$PROV$"
  DISCOVERY_SPREAD_4:0 "我々はこの知識を活用する方法を見つける必要があります。"
  DISCOVERY_SPREAD_LOG:0 "$PROV$の発見、我々の下にも"
@@ -2067,9 +2067,9 @@
  WEDEFECT_SETUP:0 "我々の州が離反したとき"
  WEDEFECT_HEADER:0 "離反！"
  WEDEFECT_1:0 "我が国の州"
- WEDEFECT_2:0 "$PROV$"
- WEDEFECT_3:0 "は以下の国へと離反しました。"
- WEDEFECT_4:0 "$COUNTRY$"
+ WEDEFECT_2:0 "$PROV$は"
+ WEDEFECT_3:0 "$COUNTRY$へと"
+ WEDEFECT_4:0 "離反しました。"
  WEDEFECT_6:0 "愚か者どもめ！この愚行には我慢ならん！"
  WEDEFECT_LOG:0 "$PROV$、$COUNTRY$へ離反"
  WEDEFECT_BTN1:0 "OK"
@@ -2091,10 +2091,10 @@
  OTHERDEFECT_TITLE:0 "州の離反"
  OTHERDEFECT_SETUP:0 "外国の州が他国へと離反したとき"
  OTHERDEFECT_HEADER:0 "離反！"
- OTHERDEFECT_1:0 "他国の州"
- OTHERDEFECT_2:0 "$PROV$"
- OTHERDEFECT_3:0 "は以下の国へと離反しました。"
- OTHERDEFECT_4:0 "$COUNTRY$"
+ OTHERDEFECT_1:0 "他国の州である"
+ OTHERDEFECT_2:0 "$PROV$は"
+ OTHERDEFECT_3:0 "$COUNTRY$へと"
+ OTHERDEFECT_4:0 "離反しました。"
  OTHERDEFECT_LOG:0 "$PROV$、$COUNTRY$へ離反"
  OTHERDEFECT_BTN1:0 "OK"
  OTHERDEFECT_BTN2:0 "OK"
@@ -2135,10 +2135,10 @@
  COLSUCCESS_TITLE:0 "植民地が設立された"
  COLSUCCESS_SETUP:0 "我が国が新植民地設立の試みに成功したとき"
  COLSUCCESS_HEADER:0 "知事からの報告"
- COLSUCCESS_1:0 "植民に成功！"
- COLSUCCESS_2:0 "$MONARCHTITLE$、我々は以下における植民地設立に成功しました"
- COLSUCCESS_3:0 "$PROV$"
- COLSUCCESS_4:0 "そこに多数の入植者を送り込むことで最終的に都市に成長します。"
+ COLSUCCESS_1:0 "植民成功！"
+ COLSUCCESS_2:0 "$MONARCHTITLE$、我々は$PROV$に"
+ COLSUCCESS_3:0 "無事植民地を設立しました。"
+ COLSUCCESS_4:0 "さらに多くの入植者を送り込むことで最終的に都市へと成長することでしょう。"
  COLSUCCESS_LOG:0 "$PROV$での植民地設立に成功"
  COLSUCCESS_BTN1:0 "OK"
  COLSUCCESS_BTN2:0 "OK"
@@ -3787,8 +3787,8 @@
  NEWFOGWE_1:0 "新しい政府！"
  NEWFOGWE_2:0 "$MONARCHTITLE$、我々は新しい政体を採り入れて、"
  NEWFOGWE_3:0 "新時代に入りました。これからは、"
- NEWFOGWE_4:0 "$FOG$の"
- NEWFOGWE_5:0 "原則に従って統治していきます。"
+ NEWFOGWE_4:0 "$FOG$"
+ NEWFOGWE_5:0 "の原則に従って統治していきます。"
  NEWFOGWE_LOG:0 "政体を$FOG$へ"
  NEWFOGWE_BTN1:0 "OK"
  NEWFOGWE_BTN2:0 "OK"
@@ -3799,8 +3799,8 @@
  NEWFOGOTHER_1:0 "$COUNTRY$からの使者"
  NEWFOGOTHER_2:0 "彼らは新しい政体を採り入れて、"
  NEWFOGOTHER_3:0 "新時代に入りました。これから彼らは"
- NEWFOGOTHER_4:0 "$FOG$の"
- NEWFOGOTHER_5:0 "原則に従って統治していきます。"
+ NEWFOGOTHER_4:0 "$FOG$"
+ NEWFOGOTHER_5:0 "の原則に従って統治していきます。"
  NEWFOGOTHER_6:0 "彼らの国は、これから歴史を通じて新しい道を歩みます。"
  NEWFOGOTHER_LOG:0 "$COUNTRY$、政体を$FOG$へ"
  NEWFOGOTHER_BTN1:0 "OK"
@@ -4274,7 +4274,7 @@
  OTHERSELLPROV_1:0 "$ACTOR$からの使者"
  OTHERSELLPROV_2:0 "$ACTOR$は財政上または外交上の問題を抱えているようで、"
  OTHERSELLPROV_3:0 "最後の手段として州の一つを売却することに合意しました。"
- OTHERSELLPROV_4:0 "原因が何であれ、$PROVINCE$は現在、以下が領有しています。"
+ OTHERSELLPROV_4:0 "原因が何であれ、$PROVINCE$は現在"
  OTHERSELLPROV_BTN1:0 "OK"
  OTHERSELLPROV_BTN2:0 "OK"
  OTHERSELLPROV_BTN3:0 "移動"
@@ -6796,8 +6796,8 @@
  INSUTOUS_SCORNFUL_1:0 "$ACTOR$からの使者"
  INSUTOUS_SCORNFUL_2:1 "$MONARCHTITLE$、$ACTOR$の信頼できない屑が我々に侮辱を送りました"
  INSUTOUS_SCORNFUL_3:0 "§Y「$SCORNFUL_INSULT$」§!"
- INSUTOUS_SCORNFUL_4:2 "We now have a Casus Belli upon them, and our relations have deteriorated."
- INSUTOUS_SCORNFUL_5:2 "We need to teach these uncouth barbarians of $ACTOR$ to treat their superiors with respect!"
+ INSUTOUS_SCORNFUL_4:2 "我々は今、彼らに開戦事由を持っており、両国の関係は悪化しています。"
+ INSUTOUS_SCORNFUL_5:2 "この無骨な野蛮人である$ACTOR$に、目上の者に敬意をもって接することを教える必要があるのです！"
  INSUTOUS_SCORNFUL_LOG:0 "$ACTOR$、我々を侮辱"
  INSUTOUS_SCORNFUL_BTN1:0 "OK"
  INSUTOUS_SCORNFUL_BTN2:0 "OK"
@@ -6854,7 +6854,7 @@
  CHARTERCOMPANY_BTN2:0 "OK"
  CHARTERCOMPANY_BTN3:0 "移動"
  CHARTERCOMPANY_MAP:0 "売却！"
- OTHERSELLPROV_5:1 "$RECIPIENT$"
+ OTHERSELLPROV_5:1 "$RECIPIENT$が領有しています。"
  OTHERSELLPROV_LOG:1 "$ACTOR$、$RECIPIENT$に$PROVINCE$を売却"
  OTHERCHARTERCOMPANY_TITLE:0 "州の売却と交易会社設立"
  OTHERCHARTERCOMPANY_SETUP:0 "ある国が他国へ販売した州が交易会社になったとき"
