Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -473,7 +473,7 @@
  NOT_HAS_GOVERNMENT_MECHANIC:0 "政府に$MECHANIC$の機構がありません。\n"
  CHAR_CULTURE_CHANGE:0 "$WHO$は$CUL|Y$になります。\n"
  CHAR_RELIGION_CHANGE:0 "$WHO$は$REL|Y$になります。\n"
- ADVISOR_CULTURE_RELIGION:1 "$NAME|Y$は$CUL|Y$$REL|Y$です。"
+ ADVISOR_CULTURE_RELIGION:1 "$NAME|Y$：$CUL|Y$ $REL|Y$"
  EMBRACED:0 "受容"
  PRESENT:0 "存在"
  NOT_CREATED:0 "§g未発祥§!"
@@ -1113,10 +1113,10 @@
  HRE_NUM_PRINCES_IMPACT:0 "帝国の正統性を維持するために必要な構成国数§Y$NEED$§!に対して現在§Y$CURR$§!です。これは帝国の権威を毎月$VAL$変化させます。"
  LACK_OF_ELECTORS:0 "現在、帝国の選帝候数が§Y$CURR$§!のみであり、適切に機能するためには§Y$NEED$§!必要です。このため帝国の権威は毎月§R$VAL$§!減少します。"
  VASSALIZED_ELECTORS:0 "帝国内の§Y$CURR$§!の選帝候が従属国になっています。このため帝国の権威は毎月§R$VAL$§!減少します。"
- ENACT_DECREE_ONLY_ONE:0 "勅令は一度だけ制定することができ、それらは終了日前に取り消すことはできません。\n"
+ ENACT_DECREE_ONLY_ONE:0 "勅令は一度だけ制定することができ、終了日前に取り消すことはできません。\n"
  ENACT_DECREE_NOT_EMPEROR:0 "皇帝のみが勅令を制定できます。"
- ENACT_DECREE_ALREADY_ENACTED:0 "$DECREENAME$がすでに制定されています。それは$DATE|Y$に実行されます。"
- ENACT_DECREE_NOT_ENOUGH_MERITOCRACY:0 "この勅令の制定には$MERITOCRACYREQUIRED$の能力主義を必要とし、あなたは現在、$CURRENTMERITOCRACY$だけ持っています。"
+ ENACT_DECREE_ALREADY_ENACTED:0 "$DECREENAME$がすでに制定されています。$DATE|Y$に期限満了となる予定です。"
+ ENACT_DECREE_NOT_ENOUGH_MERITOCRACY:0 "この勅令の制定には$MERITOCRACYREQUIRED$の能力主義が必要で、現在$CURRENTMERITOCRACY$だけしかありません。"
  CAN_NOT_ENACT_REFORM_NOT_EMPEROR:0 "皇帝のみが帝国の改革を制定することができます。"
  CAN_NOT_ENACT_REFORM_LEAGUES:0 "帝国が宗教紛争の間は改革を制定することはできません。"
  MUST_BE_AT_PEACE_IMP_REFORM:0 "戦争中の間は改革を制定することはできません！"
@@ -1314,7 +1314,7 @@
  MERITOCRACY_IRO:0 "§Y能力主義§!\n能力主義は以下の理由により毎年$CHANGE$変化します：\n$WHY$"
  YOU_MERITOCRACY_DRO:1 "これは我々の国内の官僚の能力を表します。高ければ高いほどより効率的に我々の政治が行われます！\n政府の強化、アイデア、政策、イベントなどを通して増やすことができます。\nこの能力主義のレベルは以下の効果があります："
  THEY_MERITOCRACY_DRO:0 "これは彼らの国内の官僚の能力を表します。高ければ高いほどより効率的に彼らの政治が行われます！\nこの能力主義のレベルは以下の効果があります："
- DEVOTION_EFFECT:0 "信仰が$VALUE$$DIRECTION$\n"
+ DEVOTION_EFFECT:0 "信仰を$VALUE$$DIRECTION$\n"
  HAVE_DEVOTION_LESS_THAN:0 "信仰が右記未満である："
  HAVE_DEVOTION_MORE_THAN:0 "信仰が右記以上である："
  YEARLY_DEVOTION:0 "年間信仰"
@@ -1324,7 +1324,7 @@
  YEARLY_LEGITIMACY:0 "年間正統性"
  YEARLY_HORDE_UNITY:0 "年間遊牧民結束"
  YEARLY_REPUBLICAN_TRADITION:0 "年間共和的伝統"
- ADD_REPUBLIC_TRAD:0 "共和的伝統が$VALUE$$DIRECTION$"
+ ADD_REPUBLIC_TRAD:0 "共和的伝統を$VALUE$$DIRECTION$"
  REPUBLICAN_TRADITION_IRO:1 "§Y共和的伝統§!\nこれは国家が共和制である限り、以下の原因で毎年$CHANGE$変化します：\n$WHY$\nこのレベルの伝統は以下の効果を与えます："
  REPUBLICAN_TRADITION_DICTATORSHIP_IRO:0 "§Y共和的伝統§!\nこれは、国家が専制政治である間は、通常は変化しません。\nこのレベルの伝統は以下の効果を与えます："
  REPUBLICAN_TRADITION_DRO:0 "これは国における共和制の理念の受容を表しています。それが低いほど、専制政治を復活させる可能性のある反動派が立ち上がるでしょう。"
@@ -1526,16 +1526,16 @@
  MODIFIER_IDEA_COST:0 "アイデアのコスト"
  PATRIARCH_AUTHORITY_LESS_THAN:0 "総主教の権威が§Y$VAL$§W%未満である。\n"
  PATRIARCH_AUTHORIT_AT_LEAST:0 "総主教の権威が§Y$VAL$§W%以上である。\n"
- ADD_PATR_AUTH:0 "総主教の権威が$VALUE$$DIRECTION$"
- ADD_PIETY:0 "信仰心が$VALUE$$DIRECTION$"
- ADD_DOOM:0 "破滅が$VALUE$$DIRECTION$"
- ADD_AUTHORITY:0 "権威が$VALUE$$DIRECTION$"
+ ADD_PATR_AUTH:0 "総主教の権威を$VALUE$$DIRECTION$"
+ ADD_PIETY:0 "信仰心を$VALUE$$DIRECTION$"
+ ADD_DOOM:0 "破滅を$VALUE$$DIRECTION$"
+ ADD_AUTHORITY:0 "権威を$VALUE$$DIRECTION$"
  PATRIARCH_AUTHORITY_IN_PROVINCES:0 "あなたの正教会の州："
  FULL_PATRIARCH_AUTHORITY:0 "総主教の権威が最大に達すると獲得できます："
  NO_PATRIARCH_AUTHORITY:0 "総主教の権威がないので、なんの補正も取得しません。"
  mercantilism:0 "重商主義から"
- ADD_MERCANTILISM:0 "重商主義が$VALUE$$DIRECTION$"
- ADD_CORRUPTION:0 "汚職が$VALUE$$DIRECTION$"
+ ADD_MERCANTILISM:0 "重商主義を$VALUE$$DIRECTION$"
+ ADD_CORRUPTION:0 "汚職を$VALUE$$DIRECTION$"
  EXPENSE_CORRUPTION:0 "汚職の根絶"
  root_out_corruption:0 "汚職の根絶中"
  corruption:0 "汚職"
@@ -4544,7 +4544,7 @@
  support_mr_traders_desc:0 ""
  mr_aristocrats:0 "貴族"
  mr_aristocrats_influence:0 "貴族の影響"
- mr_aristocrats_FACTION_DESC:1 "首都の政治生命を支配する愛国的な貴族たちを代表する。彼らの主な関心事は、共和国が戦争で勝利し、自国の栄光を達成することである。\n\n§Y正の安定度から影響力を獲得します。戦争疲弊によって影響力を失います。§!"
+ mr_aristocrats_FACTION_DESC:1 "首都の政治生命を支配する愛国的な貴族たちを代表する。彼らの主な関心事は、共和国が戦争で勝利し、自国の栄光を達成することである。\n\n§Y正の安定度と陸軍伝統から影響力を獲得します。戦争疲弊によって影響力を失います。§!"
  support_mr_aristocrats_title:0 "貴族の奨励"
  support_mr_aristocrats_desc:0 ""
  SPY_AGAIN_TICKS:0 "$WHEN|Y$までの間、我々の情報網は衰退するでしょう。\n"
