--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -431,7 +431,7 @@
  CANNOT_REVOKE_PRIVILEGE_NOT_GRANTED:0 "この特権はこの階級に与えられていません。"
  CONFIRM_GRANT_PRIVILEGE_TITLE:0 "特権の付与"
  CONFIRM_REVOKE_PRIVILEGE_TITLE:0 "特権の取り消し"
- CONFIRM_GRANT_PRIVILEGE_ON_GRANT_EFFECT:0 "以下の効果があるでしょう：\n$EFFECTS$\n"
+ CONFIRM_GRANT_PRIVILEGE_ON_GRANT_EFFECT:0 "以下の効果が得られます：\n$EFFECTS$\n"
  CONFIRM_GRANT_PRIVILEGE_DESC:2 "$PRIVILEGE|Y$の特権を$ESTATE|Y$に与えてもよろしいですか？\nこれには$COST|0Y$£adm£が必要です。\n\n$EFFECT$"
  CONFIRM_GRANT_PRIVILEGE_DESC_NO_COST:1 "$PRIVILEGE|Y$の特権を$ESTATE|Y$に与えてもよろしいですか？\n\n$EFFECT$"
  CONFIRM_REVOKE_PRIVILEGE_DESC:5 "$ESTATE|Y$の$PRIVILEGE|Y$の特権を取り消してもよろしいですか？\n\n$EFFECT$この特権を取り消すと階級の忠誠度は§R$VAL$§!減少します。"
