--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -6,9 +6,9 @@
  ISOLATIONISM_SAME:0 "これは我々の孤立主義と同じであり、我々に以下を与えます：\n$EFFECTS$\n"
  TRIBUTARY_NOT_HORDE_OR_EASTERN_RELIGION:0 "天帝、東方宗教グループの国々およびステップの遊牧民の政体を持つ国々だけが朝貢国を確立できます。"
  TRIBUTARY_IS_TRIBUTARY:0 "他国への朝貢は自らの朝貢国を持つことはできません。"
- TRIBUTARYTITLE:0 "朝貢の確立"
+ TRIBUTARYTITLE:0 "朝貢を確立する"
  TRIBUTARYDESC:0 "彼らが我々の朝貢国になることを提案"
- CANCELTRIBUTARYTITLE:0 "朝貢の停止"
+ CANCELTRIBUTARYTITLE:0 "朝貢を停止する"
  CANCELTRIBUTARYDESC:0 "我々の朝貢関係を取り消します。"
  TRIBUTARYNEWDESC:0 "$COUNTRY|Y$に対して§Y朝貢国§!になるよう求めますか？\n彼らの宗主国として毎年¤・£adm£・£dip£・£mil£・£icon_manpower£の形で貢物を要求できます。\nなお、彼らは今まで通り独立した外交関係を築くことができます。\n彼らが我々と比べて技術的に遅れている場合、彼らは技術コストに$EFFECT$の割引を獲得するでしょう。"
  BREAKTRIBUTARYNEWDESC:0 "$COUNTRY$の朝貢国であることを取り消しますか？これにより両国は停戦状態となり、関係に悪影響を与えます。"
@@ -299,10 +299,10 @@
  confucian_events.14.d:1 "それらは我々の[Root.GovernmentName]の一部であるが、いくつかの[harmonization_province.Religion.GetName]の伝統は非常に耐え難いものである。文明化された人々は、儒教の教えによれば正当で論理的なものを守ることとされているが、これらの人々は、そのような規則と直接矛盾する多くの慣習を持っている。[harmonization_province.GetName]の役人たちは野蛮な方法を主張する地元の人々との闘争を続けている。"
  confucian_events.14.a:0 "蛮族め！"
  confucian_events.14.b:0 "このような取るに足らないことを気にしない。"
- confucian_events.15.t:0 "[Root.Monarch.GetTitle]の官職が権限を与えられる"
- confucian_events.15.d:0 "[harmonization_province.Religion.GetName]は野蛮な人々ですあるが、我々が利用できる習慣や儀式を持っている。支配権に関する伝統や儀式にはすでに、[Root.Monarch.GetTitle]のような高度に世俗的な権力の概念が含まれているため、我々はこれをうまく活用することができる。[harmonization_province.GetName]の地方の役人たちはすでにそうしているが、より高い水準でも[harmonization_province.Religion.GetName]の儀式を利用することが提案されている。一方で、これらの伝統が我々を汚すことを許せば、我々は祖先に恥をかかせ、正しいものに背を向けると主張する者もいる。"
- confucian_events.15.a:0 "素晴らしいと思う。"
- confucian_events.15.b:0 "恥ずべき役人たちへの処分が必要だ！"
+ confucian_events.15.t:0 "[Root.Monarch.GetTitle]の儀式に力を"
+ confucian_events.15.d:0 "[harmonization_province.Religion.GetName]は野蛮ではあるが、我々が利用できる習慣や儀式を持っている。支配権に関する伝統や儀式にはすでに、[Root.Monarch.GetTitle]のような高度に世俗的な権力の概念が含まれているため、我々はこれをうまく活用することができる。[harmonization_province.GetName]の地方の役人たちはすでにそうしているが、より高い水準でも[harmonization_province.Religion.GetName]の儀式を利用することが提案されている。一方で、これらの伝統が我々を汚すことを許せば、我々は祖先に恥をかかせ、正しいものに背を向けると主張する者もいる。"
+ confucian_events.15.a:0 "良さげだな…"
+ confucian_events.15.b:0 "恥ずべき役人どもへの処分が必要だ！"
  confucian_events.16.t:0 "蛮族に文明化をもたらす"
  confucian_events.16.d:2 "時が経つにつれて、[harmonization_province.Religion.GetName]の人々は我々の慣習の多くを受け入れるようになってきた。しかし、我が国の[Root.Dip_Advisor.GetTitle][Root.Dip_Advisor.GetName]が[harmonization_province.GetName]を訪れた時、彼らが文明化からまだ程遠いことに[Root.Dip_Advisor.GetSheHe]は気づいた。ある時、地元の有力な地主である[Root.local_influential_person.GetName]が息子の命名式に[Root.Dip_Advisor.GetHerHim]を招待したのだが、彼は彼自身の名を採って息子に名付けた。それが我慢の限界だった。\n\n[Root.Dip_Advisor.GetName]は、[harmonization_province.Religion.GetName]の人々は評価に値しない、いつか彼らが世界の文明人の一員となるとはとうてい思えないと感じながら戻ってきた。"
  confucian_events.16.a:0 "我々は彼らのやりたいようにやらせる。"
@@ -823,6 +823,6 @@
  ENEMY_GUARANTEES:0 "$NAME|Y$は以下の国によって独立が保証されています：\n"
  shinto_events.58.c:1 "南無阿弥陀仏。彼らの共同体に全権を与えるのだ。"
  shinto_events.58.e:1 "南無阿弥陀仏。彼らの哲学は理に適っている。だが、彼らの支配など許さぬ。"
- empire_of_china_nomadic_border_tt:0 "Is a §YHorde§! and has §Y300§! own and non-tributary subject total development"
+ empire_of_china_nomadic_border_tt:0 "§Y遊牧民§!で自国および従属国（非朝貢国）の合計開発度が§Y300§!以上である"
  temple_of_confucius_modifier:0 "孔子廟"
  desc_temple_of_confucius_modifier:0 "曲阜の孔廟は最大かつ最も有名な孔子廟である。元々は孔子自身の家であったが、廟は儒教の聖地のような存在になっている。多くの皇帝が廟を訪れ、孔子を偲んで犠牲を供えてきた。"
