--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -1255,7 +1255,7 @@
  FABRICATECLAIMSME_SETUP:0 "我々が他国への請求権を捏造したとき"
  FABRICATECLAIMSME_HEADER:0 "$MESSENGER$"
  FABRICATECLAIMSME_1:0 "請求権の捏造"
- FABRICATECLAIMSME_3:0 "$TARGET$"
+ FABRICATECLAIMSME_3:0 "$TARGET$の請求権を得ました。"
  FABRICATECLAIMSME_4:0 "$RECIPIENT$は我々が作成した文書に疑いを持っているかもしれませんが、我々が望む戦争を正当化するには十分です。"
  FABRICATECLAIMSME_LOG:0 "$TARGET$への請求権を捏造"
  FABRICATECLAIMSME_BTN1:0 "OK"
@@ -4956,8 +4956,8 @@
  NEWQUEEN_TITLE:0 "新$QUEENPRINCE$"
  NEWQUEEN_SETUP:0 "我が国が新しい配偶者を獲得したとき"
  NEWQUEEN_HEADER:0 "結婚！"
- NEWQUEEN_1:0 "$QUEENNAME$ $STATS$が"
- NEWQUEEN_2:0 "我々の新したな"
+ NEWQUEEN_1:0 "$QUEENNAME$ $STATS$"
+ NEWQUEEN_2:0 "が我々の新たな"
  NEWQUEEN_3:0 "$QUEENPRINCE$です。"
  NEWQUEEN_LOG:0 "$HEIRNAME$、新たな$QUEENPRINCE$に！"
  NEWQUEEN_BTN1:0 "OK"
@@ -5809,9 +5809,9 @@
  SUPPORTINDEPENDENCEREJECT_HEADER:0 ""
  SUPPORTINDEPENDENCEREJECT_1:0 "$RECIPIENT$からの使者"
  SUPPORTINDEPENDENCEREJECT_2:0 "$MONARCHTITLE$、あなたの宮廷へ深刻なお知らせです。"
- SUPPORTINDEPENDENCEREJECT_3:0 "$RECIPIENT$が"
- SUPPORTINDEPENDENCEREJECT_4:0 "我々の"
- SUPPORTINDEPENDENCEREJECT_5:0 "独立支援の提案を"
+ SUPPORTINDEPENDENCEREJECT_3:0 "$RECIPIENT$"
+ SUPPORTINDEPENDENCEREJECT_4:0 "が我々の独立を支援する"
+ SUPPORTINDEPENDENCEREJECT_5:0 "という提案を"
  SUPPORTINDEPENDENCEREJECT_6:0 "拒否しました。"
  SUPPORTINDEPENDENCEREJECT_LOG:0 "$RECIPIENT$、我々からの独立支援提案を拒否"
  SUPPORTINDEPENDENCEREJECT_BTN1:0 "OK"
@@ -5821,9 +5821,9 @@
  SUPPORTINDEPENDENCEJOINREJECTOTHER_SETUP:0 "ある国が他国の独立支援の提案を拒否したとき"
  SUPPORTINDEPENDENCEJOINREJECTOTHER_HEADER:0 ""
  SUPPORTINDEPENDENCEJOINREJECTOTHER_1:0 "$RECIPIENT$からの使者"
- SUPPORTINDEPENDENCEJOINREJECTOTHER_2:0 "$MONARCHTITLE$、$RECIPIENT$が"
+ SUPPORTINDEPENDENCEJOINREJECTOTHER_2:0 "$MONARCHTITLE$、$RECIPIENT$は"
  SUPPORTINDEPENDENCEJOINREJECTOTHER_3:0 "$ACTOR$が要請した"
- SUPPORTINDEPENDENCEJOINREJECTOTHER_4:0 "独立支援の"
+ SUPPORTINDEPENDENCEJOINREJECTOTHER_4:0 "独立を支援する"
  SUPPORTINDEPENDENCEJOINREJECTOTHER_5:0 "条約締結を拒否しました。"
  SUPPORTINDEPENDENCEJOINREJECTOTHER_LOG:0 "$RECIPIENT$、$ACTOR$からの独立支援提案を拒否"
  SUPPORTINDEPENDENCEJOINREJECTOTHER_BTN1:0 "OK"
@@ -5835,8 +5835,8 @@
  SUPPORTINDEPENDENCEINVACCEPTENEMY_1:0 "$ACTOR$からの使者"
  SUPPORTINDEPENDENCEINVACCEPTENEMY_2:0 "$MONARCHTITLE$、$BACKER$が"
  SUPPORTINDEPENDENCEINVACCEPTENEMY_3:0 "我が国の不誠実な従属国である"
- SUPPORTINDEPENDENCEINVACCEPTENEMY_4:0 "$BACKED$に対する"
- SUPPORTINDEPENDENCEINVACCEPTENEMY_5:0 "独立支援の"
+ SUPPORTINDEPENDENCEINVACCEPTENEMY_4:0 "$BACKED$"
+ SUPPORTINDEPENDENCEINVACCEPTENEMY_5:0 "の独立を支援する"
  SUPPORTINDEPENDENCEINVACCEPTENEMY_6:0 "条約を締結しました。"
  SUPPORTINDEPENDENCEINVACCEPTENEMY_LOG:1 "$BACKER$、$BACKED$の独立を支援へ"
  SUPPORTINDEPENDENCEINVACCEPTENEMY_BTN1:0 "OK"
@@ -5847,10 +5847,10 @@
  SUPPORTINDEPENDENCEINVACCEPTOTHER_HEADER:0 ""
  SUPPORTINDEPENDENCEINVACCEPTOTHER_1:0 "$ACTOR$からの使者"
  SUPPORTINDEPENDENCEINVACCEPTOTHER_2:0 "$MONARCHTITLE$、$BACKER$が"
- SUPPORTINDEPENDENCEINVACCEPTOTHER_3:0 "$BACKED$の"
- SUPPORTINDEPENDENCEINVACCEPTOTHER_4:0 "反抗的な国家と"
- SUPPORTINDEPENDENCEINVACCEPTOTHER_5:0 "独立支援の"
- SUPPORTINDEPENDENCEINVACCEPTOTHER_6:0 "条約を締結しました。"
+ SUPPORTINDEPENDENCEINVACCEPTOTHER_3:0 "反抗的な$BACKED$と"
+ SUPPORTINDEPENDENCEINVACCEPTOTHER_4:0 "独立を支援する"
+ SUPPORTINDEPENDENCEINVACCEPTOTHER_5:0 "条約を"
+ SUPPORTINDEPENDENCEINVACCEPTOTHER_6:0 "締結しました。"
  SUPPORTINDEPENDENCEINVACCEPTOTHER_LOG:1 "$BACKER$、$BACKED$の独立を支援へ"
  SUPPORTINDEPENDENCEINVACCEPTOTHER_BTN1:0 "OK"
  SUPPORTINDEPENDENCEINVACCEPTOTHER_BTN2:0 "OK"
@@ -6043,8 +6043,8 @@
  RIVAL_REMOVED_TITLE:0 "ライバルの解除"
  RIVAL_REMOVED_SETUP:0 "ある国が他国をライバルから削除したとき"
  RIVAL_REMOVED_HEADER:0 "ライバル関係が終了！"
- RIVAL_REMOVED_1:0 "$THEM$はもはや"
- RIVAL_REMOVED_2:0 "$RIVAL$を"
+ RIVAL_REMOVED_1:0 "$THEM$"
+ RIVAL_REMOVED_2:0 "はもはや$RIVAL$を"
  RIVAL_REMOVED_3:0 "ライバルだと"
  RIVAL_REMOVED_4:0 "見做していません。"
  RIVAL_REMOVED_LOG:0 "$THEM$、もはや$RIVAL$をライバルと見做さず"
@@ -6054,8 +6054,8 @@
  RIVAL_LOST_TITLE:0 "ライバルの喪失"
  RIVAL_LOST_SETUP:0 "ライバルがもはや有効なライバルでなくなったとき"
  RIVAL_LOST_HEADER:0 "もはやライバルではない"
- RIVAL_LOST_1:0 "$RIVAL$はもはや"
- RIVAL_LOST_2:0 "$WHO$にとっての"
+ RIVAL_LOST_1:0 "$RIVAL$"
+ RIVAL_LOST_2:0 "はもはや$WHO$にとっての"
  RIVAL_LOST_3:0 "ライバルとはいえません。"
  RIVAL_LOST_LOG:0 "$WHO$、もはや$RIVAL$をライバルと見做さず"
  RIVAL_LOST_BTN1:0 "OK"
@@ -6063,10 +6063,10 @@
  RIVAL_LOST_BTN3:0 "移動"
  POLICY_ENACTED_TITLE:0 "誰かが政策を制定"
  POLICY_ENACTED_SETUP:0 "ある国が政策を制定したとき"
- POLICY_ENACTED_HEADER:0 "新しい政策が制定"
- POLICY_ENACTED_1:0 "$THEM$は"
- POLICY_ENACTED_2:0 "$POLICY$"
- POLICY_ENACTED_3:0 "政策を制定しました。"
+ POLICY_ENACTED_HEADER:0 "新しい政策が制定されました"
+ POLICY_ENACTED_1:0 "$THEM$"
+ POLICY_ENACTED_2:0 "は以下の政策を制定しました。"
+ POLICY_ENACTED_3:0 "$POLICY$"
  POLICY_ENACTED_LOG:1 "$THEM$、$POLICY$の政策を制定"
  POLICY_ENACTED_BTN1:0 "OK"
  POLICY_ENACTED_BTN2:0 "OK"
@@ -6074,9 +6074,9 @@
  POLICY_REPEALED_TITLE:0 "誰かが政策を廃止"
  POLICY_REPEALED_SETUP:0 "ある国が政策を廃止したとき"
  POLICY_REPEALED_HEADER:0 "政策が廃止されました。"
- POLICY_REPEALED_1:0 "$THEM$は"
- POLICY_REPEALED_2:0 "$POLICY$"
- POLICY_REPEALED_3:0 "政策を変更しました。"
+ POLICY_REPEALED_1:0 "$THEM$"
+ POLICY_REPEALED_2:0 "は以下の政策を変更しました。"
+ POLICY_REPEALED_3:0 "$POLICY$"
  POLICY_REPEALED_LOG:0 "$THEM$、$POLICY$の政策を廃止"
  POLICY_REPEALED_BTN1:0 "OK"
  POLICY_REPEALED_BTN2:0 "OK"
@@ -6084,8 +6084,8 @@
  TRADE_RELATION_CANCEL_TITLE:0 "交易力移譲の中断"
  TRADE_RELATION_CANCEL_SETUP:0 "ある国が交易力の移譲関係を解消したとき"
  TRADE_RELATION_CANCEL_HEADER:0 "関係中断"
- TRADE_RELATION_CANCEL_1:0 "$THEM$はもはや"
- TRADE_RELATION_CANCEL_2:0 "$WHO$に"
+ TRADE_RELATION_CANCEL_1:0 "$THEM$"
+ TRADE_RELATION_CANCEL_2:0 "はもはや$WHO$に"
  TRADE_RELATION_CANCEL_3:0 "交易力を送っていません。"
  TRADE_RELATION_CANCEL_LOG:0 "$THEM$、$WHO$との交易力伝達関係を中断"
  TRADE_RELATION_CANCEL_BTN1:0 "OK"
@@ -6937,7 +6937,7 @@
  TREASURE_FLEET_TO_US_5:1 "$PIRATES$"
  TREASURE_FLEET_TO_US_6:1 "$MODIFIER$"
  FABRICATECLAIMSME_ACTOR_US:0 "我々"
- FABRICATECLAIMSME_2:1 "$MONARCHTITLE$、$WHO$は請求権を得ました"
+ FABRICATECLAIMSME_2:1 "$MONARCHTITLE$、$WHO$は"
  TRIBUTARYBREAK_5:1 "破棄しました。$REASON$"
  TRIBUTARYBREAK_LOG:1 "$ACTOR$、我々との朝貢関係を無効に"
  FLAGSHIP_SKILL_GAIN_TITLE:0 "提督がスキルを獲得"
