--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -867,7 +867,7 @@
  israel_nation_desc:0 "約束されたとおり、イスラエルの地は再び異邦人の圧政から解放され、ダビデの威光が再確立され、聖地エルサレムが再建された。主は憐憫の情と共にシオンへと戻り、町々は再び繁栄で溢れ返った。"
  federal_kingdoms_gather_the_armies_title:0 "連合王国：軍の招集"
  federal_kingdoms_gather_the_armies_desc:0 "[Root.GetName]のいくつかの王国との関係を通じて、新たな新兵部隊を編成できる。"
- federal_kingdoms_internal_royal_marriage_title:1 "Confederal Kingdoms: Arrange Marriage"
+ federal_kingdoms_internal_royal_marriage_title:1 "連合王国：婚姻の斡旋"
  federal_kingdoms_internal_royal_marriage_desc:0 "内部関係を利用して、[Root.Monarch.GetName]と自領内にいる他の王国の配偶者の一人を結婚させることができる。"
  federal_celebrate_rituals_together_title:0 "連合王国：祝賀の儀"
  federal_celebrate_rituals_together_desc:0 "特別な時には、我々それぞれを結ぶものについて思い出し、自民族の祭りを祝うことが重要である。"
@@ -997,7 +997,7 @@
  mal_trade_with_europeans_desc:0 "サフィの交易は自国の収入の柱であるが、ヨーロッパ市場がもたらす潜在的利益には及ばないものだ。よって、必然的にヨーロッパの交易市場の一つに参入することが最善となる。"
  mal_econimical_hegemony_title:0 "巡礼の準備"
  mal_econimical_hegemony_desc:1 "メッカへの巡礼は、全ての敬虔なイスラム教徒にとって神聖なる務めである。伝統的にマンサがアッラーの名のもとに富を携えてメッカを旅したことから、巡礼は自国にとってさらに意味を持つものだ。今回の巡礼では、さらに大規模な巡礼を執り行う準備をすべきだろうーそれは、ヨーロッパの驚嘆のものたちを体験するものでもある。しかしそのためには、旅費を賄う経済力と、それまでの間、君主の職務を引き継ぐ有能な廷臣が必要だ。"
- mal_riches_of_trade_tt:1 "§Y[Root.GetName]§! has at least §Y50%§! Trade Power and is the strongest §YTrade Power§! in any §YEuropean§! trade node."
+ mal_riches_of_trade_tt:1 "§Y[Root.GetName]§!が§Y50%§!以上の交易力を有しており、任意の§Yヨーロッパ§!交易ノードにおいて最大の§Y交易力§!を有する国家となる。"
  mal_fighting_musa_title:0 "マンサの武力"
  mal_fighting_musa_desc:0 "かつてのマンサ・ムーサの素晴らしき時代は終わったけれども、わが王国はもうそこから立ち直ることができなかった。\nこれは変えねばならない！ムーサ以降の全てのマンサたちの正統性は非常に疑問であり、どのマンサも国民の支持を得られていない。[Root.Monarch.GetName]が自ら自部隊を勝利へと導くことになるので、この運命を見届けることになるだろう。"
  mal_subjugate_zaf_title:1 "バンバラ族を懐柔せよ"
