--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -4,7 +4,7 @@
  WOULD_HAVE_TO_FIGHT_OVERLORD:0 "属国の宗主国と戦う必要があるだろう。"
  SUBJECT_NO_COLONIES_OR_VASSALS:0 "植民地や属国を保持していない。"
  great_peasants_war_flag:0 "大農民戦争"
- BUILD_TOOLTIP_INTRO:1 "$BUILDING|Y$を建設すると、以下の基礎効果をもたらすでしょう："
+ BUILD_TOOLTIP_INTRO:1 "$BUILDING|Y$を建設すると、以下の基礎効果をもたらします："
  MACRO_INCREASE_SAILORS_DESC:0 "この建造物は水兵は$VAL$増加させます。"
  MACRO_REDUCE_MAINTENANCE_DESC:0 "この建造物は維持費を$VAL$減少させます。"
  MISSIONCANCELLED_TITLE:0 "任務中止"
@@ -514,7 +514,7 @@
  REDUCE_OPINION_FAVOR_REQDES1:0 "$ACTOR|Y$は、自国から$THEM|Y$への評価を下げるよう求めています。\nこれにより、自国から$THEM|Y$への評価が$OPINION$分下がります。"
  SELECT_COUNTRY_TO_REDUCE_RELATIONS_WITH:0 "彼らの評価を減らすために、国を選択してください。"
  BREAKALLIANCE_NOTHING_SELECTED_DESC:0 "$THEM|Y$の同盟を破棄させたい場合に国家を選択します。"
- WE_TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度と交換する"
+ WE_TRADE_FAVORS_FOR_GOLD_TITLE:0 "好感度をダカットに変換する"
  WE_TRADE_FAVORS_FOR_GOLD_SETUP:0 "我々がある国に好感度をもって金の提供を求めたとき"
  WE_TRADE_FAVORS_FOR_GOLD_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_GOLD_1:0 "好感度とダカットの取引"
@@ -525,7 +525,7 @@
  WE_TRADE_FAVORS_FOR_GOLD_BTN1:0 "OK"
  WE_TRADE_FAVORS_FOR_GOLD_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_GOLD_BTN3:0 "移動"
- TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度と交換する"
+ TRADE_FAVORS_FOR_GOLD_TITLE:0 "好感度をダカットに変換する"
  TRADE_FAVORS_FOR_GOLD_SETUP:0 "ある国が我々に好感度をもって金銭を要求したとき"
  TRADE_FAVORS_FOR_GOLD_HEADER:0 ""
  TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$からの使者"
@@ -537,7 +537,7 @@
  TRADE_FAVORS_FOR_GOLD_BTN1:0 "OK"
  TRADE_FAVORS_FOR_GOLD_BTN2:0 "OK"
  TRADE_FAVORS_FOR_GOLD_BTN3:0 "移動"
- OTHER_TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度と交換する"
+ OTHER_TRADE_FAVORS_FOR_GOLD_TITLE:0 "好感度をダカットに変換する"
  OTHER_TRADE_FAVORS_FOR_GOLD_SETUP:0 "ある国が他国に好感度をもって金銭を求めたとき"
  OTHER_TRADE_FAVORS_FOR_GOLD_HEADER:0 ""
  OTHER_TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$からの使者"
@@ -568,7 +568,7 @@
  TRADE_FAVORS_FOR_GOLD_CANNOT_OPINION:0 "金銭を要求するには、§Y$COUNTRY$§!の評価が§Y$OPINION$§!以上必要です。"
  TRADE_FAVORS_FOR_GOLD_DESC2:2 "彼らの年収の$PERCENT|%$にあたる金銭（$CASH|Y$¤）と引き換えに$FAVOR|Y$の好感度を使います。"
  TRADE_FAVORS_FOR_GOLD_DESC:2 "$RECIPIENT|Y$に$FAVOR|Y$の好感度と引き換えに、彼らの年収の$PERCENT|%$にあたる金銭（$CASH|Y$¤）を提供してもらいます。"
- WE_TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度と交換する"
+ WE_TRADE_FAVORS_FOR_MEN_TITLE:0 "好感度を人的資源に変換する"
  WE_TRADE_FAVORS_FOR_MEN_SETUP:0 "我々がある国に好感度をもって人的資源の提供を求めたとき"
  WE_TRADE_FAVORS_FOR_MEN_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_MEN_1:0 "好感度と兵の取引"
@@ -579,7 +579,7 @@
  WE_TRADE_FAVORS_FOR_MEN_BTN1:0 "OK"
  WE_TRADE_FAVORS_FOR_MEN_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_MEN_BTN3:0 "移動"
- TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度と交換する"
+ TRADE_FAVORS_FOR_MEN_TITLE:0 "好感度を人的資源に変換する"
  TRADE_FAVORS_FOR_MEN_SETUP:0 "ある国が我々に好感度をもって兵を求めたとき"
  TRADE_FAVORS_FOR_MEN_HEADER:0 ""
  TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$からの使者"
@@ -591,7 +591,7 @@
  TRADE_FAVORS_FOR_MEN_BTN1:0 "OK"
  TRADE_FAVORS_FOR_MEN_BTN2:0 "OK"
  TRADE_FAVORS_FOR_MEN_BTN3:0 "移動"
- OTHER_TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度と交換する"
+ OTHER_TRADE_FAVORS_FOR_MEN_TITLE:0 "好感度を人的資源に変換する"
  OTHER_TRADE_FAVORS_FOR_MEN_SETUP:0 "ある国が他の国に好感度をもって兵を求めたとき"
  OTHER_TRADE_FAVORS_FOR_MEN_HEADER:0 ""
  OTHER_TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$からの使者"
@@ -620,7 +620,7 @@
  TRADE_FAVORS_FOR_MEN_CANNOT_OPINION:0 "兵士を要求するには、§Y$COUNTRY$§!の評価が§Y$OPINION$§!以上必要です。"
  TRADE_FAVORS_FOR_MEN_DESC2:0 "供給量$MONTHS$ヶ月分の人的資源（$MEN|Y$）と引き換えに$FAVOR|Y$の好感度を使います。"
  TRADE_FAVORS_FOR_MEN_DESC:0 "$RECIPIENT|Y$に好感度$FAVOR|Y$と引き換えに、供給量$MONTHS$ヶ月分の人的資源（$MEN|Y$）を求めます。"
- WE_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度と交換する"
+ WE_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "好感度を水兵に変換する"
  WE_TRADE_FAVORS_FOR_SAILORS_SETUP:0 "我々がある国に好感度をもって水兵の提供を求めたとき"
  WE_TRADE_FAVORS_FOR_SAILORS_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_SAILORS_1:0 "好感度と水兵の取引"
@@ -631,7 +631,7 @@
  WE_TRADE_FAVORS_FOR_SAILORS_BTN1:0 "OK"
  WE_TRADE_FAVORS_FOR_SAILORS_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_SAILORS_BTN3:0 "移動"
- TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度と交換する"
+ TRADE_FAVORS_FOR_SAILORS_TITLE:0 "好感度を水兵に変換する"
  TRADE_FAVORS_FOR_SAILORS_SETUP:0 "ある国が我々に好感度をもって水兵を求めたとき"
  TRADE_FAVORS_FOR_SAILORS_HEADER:0 ""
  TRADE_FAVORS_FOR_SAILORS_1:0 "$ACTOR$からの使者"
@@ -643,7 +643,7 @@
  TRADE_FAVORS_FOR_SAILORS_BTN1:0 "OK"
  TRADE_FAVORS_FOR_SAILORS_BTN2:0 "OK"
  TRADE_FAVORS_FOR_SAILORS_BTN3:0 "移動"
- OTHER_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度と交換する"
+ OTHER_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "好感度を水兵に変換する"
  OTHER_TRADE_FAVORS_FOR_SAILORS_SETUP:0 "ある国が他の国に好感度をもって水兵を求めたとき"
  OTHER_TRADE_FAVORS_FOR_SAILORS_HEADER:0 ""
  OTHER_TRADE_FAVORS_FOR_SAILORS_1:0 "$ACTOR$からの使者"
@@ -731,7 +731,7 @@
  TRADE_FAVORS_FOR_HEIR_DESC:3 "$RECIPIENT|Y$に、$FAVORS|Y$の好感度と引き換えに、我々の支配王朝に連なる者を彼らの後継者に据えることを要請します。これにより以下のような結果をもたらすので、同盟関係が脆弱な場合は破綻するかもしれないことに注意してください！\n\n- 自国と$RECIPIENT|Y$の間で$TRUCEYEARS$年間の停戦が成立します。\n- 同宗教の国家に$AE|R$の侵略的拡大が生じます。\n- #同王朝の国家からの評価が$OPINIONLOSS|R$悪化します。"
  X_IS_SUBJECT_OF_Y:0 "$COUNTRY|Y$は$OVERLORD|Y$の従属国である。"
  DIPLOMACYACTION_CATEGORY_favors:0 "好感度"
- WE_TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼度を好感度と交換する"
+ WE_TRADE_FAVORS_FOR_TRUST_TITLE:0 "好感度を信頼度に変換する"
  WE_TRADE_FAVORS_FOR_TRUST_SETUP:0 "我々がある国に好感度をもって信頼度の上昇を求めたとき"
  WE_TRADE_FAVORS_FOR_TRUST_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_TRUST_1:0 "好感度と信頼度の取引"
@@ -742,7 +742,7 @@
  WE_TRADE_FAVORS_FOR_TRUST_BTN1:0 "OK"
  WE_TRADE_FAVORS_FOR_TRUST_BTN2:0 "OK"
  WE_TRADE_FAVORS_FOR_TRUST_BTN3:0 "移動"
- TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼度を好感度と交換する"
+ TRADE_FAVORS_FOR_TRUST_TITLE:0 "好感度を信頼度に変換する"
  TRADE_FAVORS_FOR_TRUST_SETUP:0 "ある国が我々に好感度と引き換えにした信頼度を求めたとき"
  TRADE_FAVORS_FOR_TRUST_HEADER:0 ""
  TRADE_FAVORS_FOR_TRUST_1:0 "$ACTOR$からの使者"
@@ -754,7 +754,7 @@
  TRADE_FAVORS_FOR_TRUST_BTN1:0 "OK"
  TRADE_FAVORS_FOR_TRUST_BTN2:0 "OK"
  TRADE_FAVORS_FOR_TRUST_BTN3:0 "移動"
- OTHER_TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼を好感度と交換する"
+ OTHER_TRADE_FAVORS_FOR_TRUST_TITLE:0 "好感度を信頼度に変換する"
  OTHER_TRADE_FAVORS_FOR_TRUST_SETUP:0 "ある国が他国に好感度をもって信頼度を求めたとき"
  OTHER_TRADE_FAVORS_FOR_TRUST_HEADER:0 ""
  OTHER_TRADE_FAVORS_FOR_TRUST_1:0 "$ACTOR$からの使者"
@@ -920,11 +920,11 @@
  ESTATE_AGENDA_TASK_FAIL_CRITERIA:0 "以下が満たされていると失敗します：\n$CONDITIONS$\n\n"
  CLOSE_MACROBUILDER_TO_USE:0 "マクロビルダーを開いている最中は、カスタムマップモードにアクセスできません。これらを再有効化するには、マクロビルダーを閉じて下さい。"
  KNOWLEDGE_SHARING_ECOVIEW:0 "知識共有"
- TRADE_FAVORS_FOR_GOLD_DIPLO_ACTION:0 "ダカットを好感度と交換する"
- TRADE_FAVORS_FOR_MEN_DIPLO_ACTION:0 "人的資源を好感度と交換する"
- TRADE_FAVORS_FOR_SAILORS_DIPLO_ACTION:0 "水兵を好感度と交換する"
+ TRADE_FAVORS_FOR_GOLD_DIPLO_ACTION:0 "好感度をダカットに変換する"
+ TRADE_FAVORS_FOR_MEN_DIPLO_ACTION:0 "好感度を人的資源に変換する"
+ TRADE_FAVORS_FOR_SAILORS_DIPLO_ACTION:0 "好感度を水兵に変換する"
  TRADE_FAVORS_FOR_HEIR_DIPLO_ACTION:0 "親戚の後継者指名を要請する"
- TRADE_FAVORS_FOR_TRUST_DIPLO_ACTION:0 "信頼を好感度と交換する"
+ TRADE_FAVORS_FOR_TRUST_DIPLO_ACTION:0 "好感度を信頼度に変換する"
  TRADE_FAVORS_FOR_WAR_PREP_DIPLO_ACTION:0 "戦争の準備を求める"
  MERCENARY_MANPOWER_TOOLTIP:0 "人的資源補充速度：$AMOUNT|Y$/月"
  regent_female:0 "摂政"
@@ -1022,9 +1022,9 @@
  EXTEND_REGENCY_IMPERIAL_AUTHORITY_HIT:0 "あなたは皇帝なのですから、あなたにも$IAHIT|Y$の帝国の権威低下を被ります。"
  ABDICATE_PERFORM_IRO2_NEITHER:0 "このアクションにより、$PRESTIGE_HIT|R$の威信が打撃を受けます。"
  BREAK_ALLIANCE_COOLDOWN:1 "$YEARS|Y$年に一度だけ、同盟国に同盟破棄を求めることができます。\n$UNTIL|Y$に再度実施可能になります。"
- TRADE_FAVORS_FOR_GOLD_COOLDOWN:1 "$YEARS|Y$年に一度だけ、味方に好意と金の交換を依頼することができます。\n$UNTIL|Y$になると再び交換できるようになります。"
- TRADE_FAVORS_FOR_MANPOWER_COOLDOWN:1 "$YEARS|Y$年に一度だけ、味方に好意と人的資源の交換を依頼することができます。\n$UNTIL|Y$になると再び交換できるようになります。"
- TRADE_FAVORS_FOR_SAILORS_COOLDOWN:1 "$YEARS|Y$年に一度だけ、味方に好意と水兵の交換を依頼することができます。\n$UNTIL|Y$になると再び交換できるようになります。"
+ TRADE_FAVORS_FOR_GOLD_COOLDOWN:1 "$YEARS|Y$年に一度だけ、味方に好感度と金の交換を依頼することができます。\n$UNTIL|Y$になると再び交換できるようになります。"
+ TRADE_FAVORS_FOR_MANPOWER_COOLDOWN:1 "$YEARS|Y$年に一度だけ、味方に好感度と人的資源の交換を依頼することができます。\n$UNTIL|Y$になると再び交換できるようになります。"
+ TRADE_FAVORS_FOR_SAILORS_COOLDOWN:1 "$YEARS|Y$年に一度だけ、味方に好感度と水兵の交換を依頼することができます。\n$UNTIL|Y$になると再び交換できるようになります。"
  REDUCE_RELATIONS_COOLDOWN:1 "$YEARS|Y$年に一度だけ、同盟国に他国との関係縮小を求めることができます。\n彼らは、$UNTIL|Y$に再度実施可能になります。"
  DIPLO_SAILORS:0 "$WHO$の水兵："
  DIPLO_LOW_SAILORS:0 "$WHO$の水兵数が少ない："
@@ -1549,48 +1549,48 @@
  SECEDE_SUBJ_TRIBAL_LAND:0 "$WHO$ will cede $WHAT$ Tribal Land to $TO$, changing Liberty Desire by $LD|-$."
  SECEDE_TRIBAL_LAND:0 "$WHO$ will cede $WHAT$ Tribal Land to $TO$."
  DIPLO_LOAN_TOTAL_INTEREST_TOO_MUCH:0 "Total interest of $INTEREST|Y$¤ exceeds $PERCENT|Y%$ of the loan amount: "
- CONVERT_TRIBUTARY_TO_VASSAL_DIPLO_ACTION:0 "Convert Tributary To Vassal"
- WE_CONVERT_TRIBUTARY_TO_VASSAL_TITLE:0 "Convert Tributary To Vassal"
- WE_CONVERT_TRIBUTARY_TO_VASSAL_SETUP:0 "When we use Mandate to make a country into a Vassal."
+ CONVERT_TRIBUTARY_TO_VASSAL_DIPLO_ACTION:0 "朝貢国を属国に転換する"
+ WE_CONVERT_TRIBUTARY_TO_VASSAL_TITLE:0 "朝貢国の属国化"
+ WE_CONVERT_TRIBUTARY_TO_VASSAL_SETUP:0 "天命を使用し、朝貢国を属国にしたとき"
  WE_CONVERT_TRIBUTARY_TO_VASSAL_HEADER:0 "$MESSENGER$"
- WE_CONVERT_TRIBUTARY_TO_VASSAL_1:0 "Tributary Converted To Vassal"
- WE_CONVERT_TRIBUTARY_TO_VASSAL_2:0 "$MONARCHTITLE$, we have converted $RECIPIENT$ into a Vassal"
- WE_CONVERT_TRIBUTARY_TO_VASSAL_3:0 "in exchange for $MANDATE|Y$ Mandate."
- WE_CONVERT_TRIBUTARY_TO_VASSAL_4:0 "Our minions grow in number!"
- WE_CONVERT_TRIBUTARY_TO_VASSAL_LOG:0 "We have converted $RECIPIENT$ into a Vassal using our Mandate."
+ WE_CONVERT_TRIBUTARY_TO_VASSAL_1:0 "朝貢国を属国に転換しました"
+ WE_CONVERT_TRIBUTARY_TO_VASSAL_2:0 "$MONARCHTITLE$、我々は$RECIPIENT$を属国に"
+ WE_CONVERT_TRIBUTARY_TO_VASSAL_3:0 "$MANDATE|Y$の天命と引き換えに転換しました。"
+ WE_CONVERT_TRIBUTARY_TO_VASSAL_4:0 "我らが僕がどんどん増えています！"
+ WE_CONVERT_TRIBUTARY_TO_VASSAL_LOG:0 "天命を用い、$RECIPIENT$を属国に"
  WE_CONVERT_TRIBUTARY_TO_VASSAL_BTN1:0 "OK"
  WE_CONVERT_TRIBUTARY_TO_VASSAL_BTN2:0 "OK"
  WE_CONVERT_TRIBUTARY_TO_VASSAL_BTN3:0 "移動"
- CONVERT_TRIBUTARY_TO_VASSAL_TITLE:0 "Convert Tributary To Vassal"
- CONVERT_TRIBUTARY_TO_VASSAL_SETUP:0 "When a country uses Mandate to make us into a Vassal."
- CONVERT_TRIBUTARY_TO_VASSAL_HEADER:0 "Herald from"
- CONVERT_TRIBUTARY_TO_VASSAL_1:0 "$ACTOR$"
+ CONVERT_TRIBUTARY_TO_VASSAL_TITLE:0 "朝貢国の属国化"
+ CONVERT_TRIBUTARY_TO_VASSAL_SETUP:0 "ある国が天命を使用し、我々を属国にしたとき"
+ CONVERT_TRIBUTARY_TO_VASSAL_HEADER:0 ""
+ CONVERT_TRIBUTARY_TO_VASSAL_1:0 "$ACTOR$からの使者"
  CONVERT_TRIBUTARY_TO_VASSAL_2:0 "$MONARCHTITLE$、$ACTOR$は"
- CONVERT_TRIBUTARY_TO_VASSAL_3:0 "converted us into their Vassals"
- CONVERT_TRIBUTARY_TO_VASSAL_4:0 "in exchange for Mandate."
- CONVERT_TRIBUTARY_TO_VASSAL_5:0 "We are happy to help our allies!"
- CONVERT_TRIBUTARY_TO_VASSAL_LOG:0 "$ACTOR$ have converted us into their Vassals."
+ CONVERT_TRIBUTARY_TO_VASSAL_3:0 "$MANDATE|Y$の天命と引き換えに"
+ CONVERT_TRIBUTARY_TO_VASSAL_4:0 "我々を属国に転換しました。"
+ CONVERT_TRIBUTARY_TO_VASSAL_5:0 "盟友のお役に立てて嬉しいです！"
+ CONVERT_TRIBUTARY_TO_VASSAL_LOG:0 "$ACTOR$、我々を属国に"
  CONVERT_TRIBUTARY_TO_VASSAL_BTN1:0 "OK"
  CONVERT_TRIBUTARY_TO_VASSAL_BTN2:0 "OK"
  CONVERT_TRIBUTARY_TO_VASSAL_BTN3:0 "移動"
- OTHER_CONVERT_TRIBUTARY_TO_VASSAL_TITLE:0 "Convert Tributary To Vassal"
- OTHER_CONVERT_TRIBUTARY_TO_VASSAL_SETUP:0 "When a country uses Mandate to make another country into a Vassal."
- OTHER_CONVERT_TRIBUTARY_TO_VASSAL_HEADER:0 "Herald from"
- OTHER_CONVERT_TRIBUTARY_TO_VASSAL_1:0 "$ACTOR$"
+ OTHER_CONVERT_TRIBUTARY_TO_VASSAL_TITLE:0 "朝貢国の属国化"
+ OTHER_CONVERT_TRIBUTARY_TO_VASSAL_SETUP:0 "ある国が天命を使用し、他国を属国にしたとき"
+ OTHER_CONVERT_TRIBUTARY_TO_VASSAL_HEADER:0 ""
+ OTHER_CONVERT_TRIBUTARY_TO_VASSAL_1:0 "$ACTOR$からの使者"
  OTHER_CONVERT_TRIBUTARY_TO_VASSAL_2:0 "$MONARCHTITLE$、$ACTOR$は"
- OTHER_CONVERT_TRIBUTARY_TO_VASSAL_3:0 "converted $RECIPIENT$ int their Vassal using their Mandate."
- OTHER_CONVERT_TRIBUTARY_TO_VASSAL_6:0 "They grow worryingly stronger..."
- OTHER_CONVERT_TRIBUTARY_TO_VASSAL_LOG:0 "$ACTOR$ has converted $RECIPIENT$ into their Vassals in exchange for Mandate."
+ OTHER_CONVERT_TRIBUTARY_TO_VASSAL_3:0 "天命を使って$RECIPIENT$を属国に転換しました。"
+ OTHER_CONVERT_TRIBUTARY_TO_VASSAL_6:0 "気がかりになるほど奴らが強大になっています…"
+ OTHER_CONVERT_TRIBUTARY_TO_VASSAL_LOG:0 "$ACTOR$、天命と引き換えに$RECIPIENT$を属国に"
  OTHER_CONVERT_TRIBUTARY_TO_VASSAL_BTN1:0 "OK"
  OTHER_CONVERT_TRIBUTARY_TO_VASSAL_BTN2:0 "OK"
  OTHER_CONVERT_TRIBUTARY_TO_VASSAL_BTN3:0 "移動"
- CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_EMPEROR:0 "You are not the Celestial Emperor."
- CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_GOT_REFORM:0 "The Celestial Emperor cannot Vassalise its Tributaries until the correct decision has been made."
- CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_ENOUGH_MANDATE:0 "You do not have the $MANDATE$ Mandate required."
- CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_TOO_MUCH_LIBERTY_DESIRE:0 "$COUNTRY$ have more than $LIBERTYDESIRE$ Liberty Desire."
- CONVERT_TRIBUTARY_TO_VASSAL_DESC2:0 "Spend $MANDATE|Y$ Mandate ($PERCENT|%$ of their development) to convert $COUNTRY|Y$ from a Tributary State to a Vassal."
- CONVERT_TRIBUTARY_TO_VASSAL_DESC:0 "We will spend $MANDATE|Y$ Mandate ($PERCENT|%$ of their development) to convert $COUNTRY|Y$ from a Tributary State to a Vassal."
- leader_death_reason_lost_at_sea:0 "[GetSheHeCap] died at sea after his transport ship sank."
+ CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_EMPEROR:0 "中華皇帝ではありません。"
+ CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_GOT_REFORM:0 "中華皇帝は、正しい決断がなされるまで、その朝貢国を属国化させることはできません。"
+ CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_ENOUGH_MANDATE:0 "必要な天命$MANDATE$がありません。"
+ CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_TOO_MUCH_LIBERTY_DESIRE:0 "$COUNTRY$は$LIBERTYDESIRE$以上の独立欲求を持っています。"
+ CONVERT_TRIBUTARY_TO_VASSAL_DESC2:0 "$MANDATE|Y$の天命（彼らの開発度の$PERCENT|%$）を消費し$COUNTRY|Y$を朝貢国から属国に転換します。"
+ CONVERT_TRIBUTARY_TO_VASSAL_DESC:0 "$MANDATE|Y$の天命（彼らの開発度の$PERCENT|%$）を消費し$COUNTRY|Y$を朝貢国から属国に転換します。"
+ leader_death_reason_lost_at_sea:0 "[GetSheHeCap]は輸送船が沈没した後、海で死亡しました。"
  MODIFIER_FREE_LAND_LEADER_POOL:0 "陸軍指揮官枠"
  MODIFIER_FREE_NAVY_LEADER_POOL:0 "海軍指揮官枠"
  land_forcelimit:0 "陸軍扶養限界"
@@ -1600,7 +1600,7 @@
  ALLOW_ATTACH_CANNOT_EXILED:0 "Exiled Units cannot attach other armies."
  great_project_can_be_upgraded_instant:0 "大事業がアップグレード可能"
  great_project_can_be_upgraded_delayed:0 "以下の大事業がアップグレード可能：\n$LIST$"
- PEACE_OPTION_REQUIRES_OTHER_PEACE_OPTION:0 "$TREATYTYPE$の要求をせずにこの要求を行うことはできません。"
+ PEACE_OPTION_REQUIRES_OTHER_PEACE_OPTION:0 "は$TREATYTYPE$の要求をせずにこの要求を行うことはできません。"
  COMMA:0 "、"
  AND_LIST:0 "そして"
  OR_LIST:0 "または"
